C-C++01.md 1014行,不再修改

--- a/C-C++01.md
+++ b/C-C++01.md
@@ -586,9 +586,7 @@
   + 不可以包含全局对象和全局函数
     + 由于`.hpp`本质上是作为`.h`被调用者包含的文件，所以当`.hpp`文件中存在全局对象或者全局函数，而该`.hpp`被多个调用者包含时，将在链接时导致符号重定义错误。要避免这种情况，需要去除全局对象，将全局函数封装为类的静态方法。
 
-## 源文件与程序
-
-### 分离编译
+## 分离编译
 
 + 任何实际程序都由很多逻辑上分离的部分（如命名空间）组成，为了更好地管理这些组成部分，我们可以将程序表示为一组（源码）文件，其中每个文件包含一个或者多个逻辑组件。
 + 我们以接口（如函数声明）与实现（如函数定义）的完全分离为目标。
@@ -600,6 +598,55 @@
   + 链接器(linker)是将分离编译的多个部分绑定在一起的程序。编译器有时也被称为加载器(loader)
     + 链接可以在程序开始运行前全部完成，也可以在程序运行中将新代码添加进来(“动态链接”)
 
+## 预处理器
+
++ 预处理器是一些**指令**，指示编译器在实际编译之前所需完成的预处理。
++ 所有的预处理器指令都是以井号（`#`）开头，只有空格字符可以出现在预处理指令之前。
++ 预处理指令不是 `C++` 语句，所以它们不会以分号（`;`）结尾。
+
++  `#include `指令。这个宏用于把头文件包含到源文件中
++  C++ 还支持很多预处理指令，比如 `#include`、`#define`、`#if`、`#else`、`#line` 等
++ #define 预处理指令用于创建符号常量。该符号常量通常称为宏，指令的一般形式是：
+    + `#define macro-name replacement-text `
+    + 当这一行代码出现在一个文件中时，在该文件中后续出现的所有宏都将会在程序编译之前被替换为 replacement-text
+
++ 条件编译
+  + 有几个指令可以用来**有选择地对部分程序源代码进行编译**。这个过程被称为条件编译
+  + 条件预处理器的结构与 if 选择结构很像
+    ```
+      #ifdef NULL
+         #define NULL 0
+      #endif
+    ``` 
+  + 可以只在调试时进行编译，调试开关可以使用一个宏来实现
+    ```
+      #ifdef DEBUG
+       cerr <<"Variable x = " << x << endl;
+      #endif
+    ``` 
+  + 可以使用 #if 0 语句注释掉程序的一部分
+    ```
+      #if 0
+         不进行编译的代码
+      #endif
+    ``` 
+
++ `#` 和 `##` 预处理运算符在 `C++` 和 `ANSI/ISO C` 中都是可用的
+  + `#` 运算符会把 `replacement-text` 令牌转换为用引号引起来的字符串,
+    + `#` 字符串化的意思，出现在宏定义中的`#`是把跟在后面的参数转换成一个字符串
+    + 当用作字符串化操作时，`#` 的主要作用是将宏参数不经扩展地转换成字符串常量
+    + 宏定义参数的左右两边的空格会被忽略，参数的各个 `Token` 之间的多个空格会被转换成一个空格
+    + 宏定义参数中含有需要特殊含义字符如`"`或`\`时，它们前面会自动被加上转义字符 `\`
+  + `##` 运算符用于连接两个令牌
+    + `##` 连接符号，把参数连在一起。将多个 `Token` 连接成一个 `Token`
+    + 它不能是宏定义中的第一个或最后一个 Token
+    + 前后的空格可有可无
+
++ C++中的预定义宏
+  + `__LINE__`  --  这会在程序编译时包含当前行号。
+  + `__FILE__`  --  这会在程序编译时包含当前文件名。
+  + `__DATE__`  --  这会包含一个形式为 month/day/year 的字符串，它表示把源文件转换为目标代码的日期
+  + `__TIME__`  --  这会包含一个形式为 hour:minute:second 的字符串，它表示程序被编译的时间
 
 ## C++ STL中的map
 
