--- a/晶视-1838.md
+++ b/晶视-1838.md
@@ -16,22 +16,34 @@ gdbserver :9999 test_enc.exe test_ffmpeg --src MAH00433.mp4
 scp -r imgs/ user@192.167.15.58:/tmp/
 
 ```
++ sample_venc_lib.c : 1387 non-bind mode, source frame either comes from file or VPSS
++ sample_multivenc.c : 437 encode_loop
 
 + 通过接口使用物理设备，
 + 每一个物理设备都有一个设备号，一一对应，指定哪一个设备号就是用哪一个设备
 
++ 编码器，解码器 工作原理和底层实现
+  + 一直工作，关于流，没有停止，是一个个数据，只是编译器定义某一段为一帧或一个数据包
+
 ## 概述
 
-+ CVITEK 所提供的多媒体软件架构（Multimedia Framework， 简称 MMF），用以缩短应用程序开发所需的时间。 此架构屏蔽了芯片端的复杂底层设计和差异，对应用程序提供统一且便捷的MMF Programming Interface编程接口。 MMF 包含了以下功能： ISP 影像前处理（包含 HDR、去噪、边缘锐化等）、输入影像撷取及输出、图像几何校正、H.265/ H.264/JPEG 编解码、音频撷取及输出、音频编解码等
++ `CVITEK` 所提供的多媒体软件架构（`Multimedia Framework`， 简称 `MMF`），用以缩短应用程序开发所需的时间。 此架构屏蔽了芯片端的复杂底层设计和差异，对应用程序提供统一且便捷的MMF Programming Interface编程接口。 MMF 包含了以下功能： 
+  + ISP 影像前处理（包含 HDR、去噪、边缘锐化等）
+  + 输入影像撷取及输出
+  + 图像几何校正
+  + H.265/ H.264/JPEG 编解码
+  + 音频撷取及输出
+  + 音频编解码等
 
 + 定义及缩写
-  + MMF(Multimedia Framework 多媒体软件架构)
-  + ISP(Image Signal Processor 影像处理处理器)
-  + VI(Video Input 影像输入)
-  + VPSS(Video Process Sub-System 影像处理子系统)
-  + VO(Video Output 影像输出)
-  + VDEC(Video Decoder 影像解码)
-  + VENC(Video Encoder 影像编码)
+  + MMF   -- `Multimedia Framework`      --  多媒体软件架构
+  + ISP   -- `Image Signal Processor`    --  影像处理处理器
+  + VI    -- `Video Input`               --  影像输入
+  + VPSS  -- `Video Process Sub-System`  --  影像处理子系统
+  + VO    -- `Video Output`              --  影像输出
+  + VDEC  -- `Video Decoder`             --  影像解码
+  + VENC  -- `Video Encoder`             --  影像编码
+  + MIPI  -- `Mobile Industry Processor Interface` -- 移动行业处理器接口
 
 + 内部主要处理流程：
   + VI 捕捉视频图像，可对其做剪切、影像优化等处理后，再将图像数据传递给VPSS 处理
@@ -41,13 +53,18 @@ scp -r imgs/ user@192.167.15.58:/tmp/
   + REGION 可以将用户所指定的位图（Bitmap）作为 OSD 叠加到图像数据上
 
 + 系统绑定
-  + SDK 提供系统绑定接口（CVI_SYS_Bind） ，即通过绑定数据源和数据接收者来建立两者之间的关联关系。 绑定后，数据源生成的数据将自动发送给接收者。 一个数据源可以绑定多个数据接收者，若数据源未绑定，则最终会自动返回视频内存区块池
+  + SDK 提供系统绑定接口（`CVI_SYS_Bind`） ，即通过绑定数据源和数据接收者来建立两者之间的关联关系。 **绑定后，数据源生成的数据将自动发送给接收者**。 
+  + 一个数据源可以绑定多个数据接收者，若数据源未绑定，则最终会自动返回视频内存区块池
   + 同一个数据接收者只能绑定一个数据源
   + VI 和 VDEC 作为数据源,是以通道为发送者,向其他模块发送数据,用户将设备号置为 0,SDK 不检查输入的设备号
   + VPSS 作为数据接收者时,是以设备(GROUP)为接收者,接收其他模块发来的数据,用户将通道号置为 0
   + 其他情况均需指定设备号和通道号
 
-## VDEC VO
++ 智能盒子上的视频文件相关应用
+  + 存储介质 --》 VDEC --》 VPSS --》 VENC --》 压缩码流或存储介质
+  + 存储介质或压缩码流 --》 VDEC --》 VPSS --》VO --》 显示屏
+
+## VDEC 
 
 + VDEC模块提供驱动视频解码硬件工作的对应接口，实现**视频解码功能**
 
@@ -67,7 +84,7 @@ scp -r imgs/ user@192.167.15.58:/tmp/
 ## 结构体
 
 + VDEC_CHN_ATTR_S
-  + 273页
+  + MMF文档：273页
 
 --------------------------------------------------------------------------------------------------------------------------------
 
@@ -241,7 +258,7 @@ scp -r imgs/ user@192.167.15.58:/tmp/
   + cvi_vdec.h  cvi_comm_video.h  cvi_comm_vdec.h
   + libvdec.so / libvdec.a
 + 注意
-  + 发送数据前必须保证已经调用`CVI_VDEC_CreateChn`, `CVI_VDEC_StartRecvStream`
+  + **发送数据前必须保证已经调用`CVI_VDEC_CreateChn`, `CVI_VDEC_StartRecvStream`**
   + 此接口在mjpeg， jpeg译码状态下，送入长度0（pstStream->u32Len)会返回CVI_SUCCESS
   + 译码失败会回传错误码：`ERR_CVI_VDEC_SEND_STREAM`
 
@@ -290,8 +307,8 @@ scp -r imgs/ user@192.167.15.58:/tmp/
 + 原型：`CVI_S32 CVI_VENC_CreateChn (VENC_CHN VeChn, const VENC_CHN_ATTR_S *pstAttr);`
 + 功能：创建编码通道
 + 参数：
-  + `VeChn`  -- VENC Channel 号  --  输入
-  + `pstAttr`  -- VENC_CHN_ATTR_S 属性指针--  输入
+  + `VeChn`    -- VENC Channel 号         --  输入
+  + `pstAttr`  -- VENC_CHN_ATTR_S 属性指针 --  输入
 + 返回值:
   + CVI_SUCCESS   -- 成功
   + 非0           -- 失败，其值为错误码
@@ -300,9 +317,9 @@ scp -r imgs/ user@192.167.15.58:/tmp/
   + 库文件:libvenc.a
 + 注意:
   + 通道属性分为三个结构：
-    + VENC_ATTR_S: 决定编码属性此属性决定编码协议并赋值设定对应宽，高
-    + VENC_RC_ATTR_S:码率控制器属性， 此属性随编码设定及码率控制模式 （CBR、VBR、FIXQP）不同对应子结构做设定
-    + VENC_GOP_ATTR_S: GOP 类型属性,编码 GOP 类型(编码单参考帧,P帧, GOP 类型。)
+    + `VENC_ATTR_S`: 决定编码属性,**此属性决定编码协议并赋值设定对应宽，高**
+    + `VENC_RC_ATTR_S`:码率控制器属性， 此属性随编码设定及码率控制模式 （CBR、VBR、FIXQP）不同对应子结构做设定
+    + `VENC_GOP_ATTR_S`: GOP 类型属性,编码 GOP 类型(编码单参考帧,P帧, GOP 类型。)
     + 推荐的编码宽高为: 3840x2160(4k)、1920x1080(1080P)、1280x720(720P)
   + 用户可参阅 `sample_common_venc.c` 内 `SAMPLE_COMM_VENC_SetChnAttr`参考对应属性指针的设定
 
@@ -382,7 +399,7 @@ scp -r imgs/ user@192.167.15.58:/tmp/
 + 功能：送出影像以供编码
 + 参数：
   + `VeChn`  --  编码通道号  --  输入
-  + `pstFrame`  --  VIDEO_FRAME_INFO_S 属性指针。  --  输入
+  + `pstFrame`  --  VIDEO_FRAME_INFO_S 属性指针  --  输入
   + `S32MilliSec`  --  发送图像超时时间,取值范围:[-1,+∞ ) | -1:阻塞 | 0:非阻塞 | 大于0:超时时间。--  输入
 + 返回值:
   + CVI_SUCCESS   -- 成功
