--- a/视频图像基础知识2.md
+++ b/视频图像基础知识2.md
@@ -90,3 +90,56 @@
     + 0xFFD0~0xFFD7：RSTn标记，遇到标记时，对差分解码变量进行重置（归0）
     + 0xFFD9：图像结束标记，图像压缩数据至此结束
   + EOI  （0xFFD9） -- 代表JFIF图像数据的结束，即文件结尾
+
+-----------------------------------------------------------------------------------------------------------------------------------------
+
+## 腾讯 开发者社区 
+
++ 文章链接：`https://cloud.tencent.com/developer/article/1385273`
+
++ 就音频而言，无论是算法多样性，Codec种类还是音频编解码复杂程度都远远比视频要高。
+
++ 视频的Codec目前还主要是**以宏块为处理单元**，预测加变换的混合编码框架，例如H.264和H.265都是在这一框架下
+
+### 直播和点播
+
++ 从广义上来讲，直播和点播都是一种视频播放场景
++ 如果想要简单地区分二者，确实可以通过判断当前播放的视频画面是不是实时的来区分
+  + 如果是实时的画面就是直播，
+  + 如果不是实时的画面就是点播
+
++ 直播
+  + 视频直播播放的视频内容是实时的视频画面，视频源是实时的媒体流。
+  + 视频直播的播放内容稍纵即逝，无法回退和快进。
+  + 日常生活中的视频直播场景非常多，比如直播带货、视频会议、赛事直播等
+
++ 点播
+  + 视频点播播放的视频内容是非实时的视频画面，
+  + 视频源是已经存在的视频文件或者媒体源，可以多次使用，可以回退和快进。
+  + 日常生活中的视频点播场景也非常多，比如有线电视、网络点播、短视频等
+
++ 直播和点播的工作流程
+  + 视频直播会**涉及一个比较完整的视频处理流程**，包括视频画面和声音采集、视频编码、组包发送、网络传输、收包解包、视频解码、视频渲染和声音播放等
+  + 视频点播包括的流程就比较少了，一般只涉及文件读取、网络传输、视频解码、视频渲染和声音播放等流程，不会涉及视频画面和声音采集、视频编码、组包
+
++ 技术架构
+  + 视频直播，**常见的低延时方案大多是 RTC （Real time communication）方案**，比如 WebRTC；大会直播类的场景一般是 CDN 方案，常用 rtmp、hls 等流媒体协议方案
+  + 视频点播，常用的有电视信号和网络协议，比如 http，https 等，视频格式有 m3u8、mp4、flv、mkv、mxf 等。由于上述网络协议和传输信号的差异，视频直播和视频点播的播放器方案有所不同，也是二者的显著差异之一
+
+-----------------------------------------------------------------------------------------------------------------------------------------
+
+## RTC
+
+### 什么是RTC？
+
++ RTC（Real time communication）实时通信，是实时音视频的一个简称，我们常说的RTC技术一般指的是WebRTC技术，已经被 W3C 和 IETF 发布为正式标准
+
++ 由于几乎所有主流浏览器都支持 WebRTC 标准 API ，因此也让浏览器之间无插件化的音视频互通成为可能， 大大降低了音视频开发的门槛，开发者只需要调用 WebRTC API 即可快速构建出音视频应用
+
++ 更广义的RTC技术，不单单局限于音视频，包括IM(Instant messaging,即时通讯)、图片、白板、文件共享等富媒体在内的实时交互也属于RTC技术范畴。 
+
+### 一套完善的RTC服务应用的技术
+
++ RTMP只是TCP上的一个标准协议，所以接入是一个标准体系，推流端可以是OBS( Open Broadcaster Software)这种直播软件工具，也可自开发rtmp推流工具，播放端可以是Flash播放器（Adobe 2020 12月份已经弃用）、服务端有技术成熟的CDN(Content Delivery Network，即内容分发网络)技术和设施进行分发、Native的播放器或者flv.js/hls.js这种开源播放器组件，遵循rtmp、flv、hls标准即可，接入成本比较低。而一个完善的RTC服务应用，需要从推流端、服务端、到拉流端，一整套完整的全链路闭环技术。
+
++ 互动连麦+服务端转推rtmp至CDN，CDN分发给观众。
