--- a/晶视-1838.md
+++ b/晶视-1838.md
@@ -1,29 +1,52 @@
 ## 笔记
 
-```
-cp -r ../ubuntu1604/CV183x .
+---------------------------------------------------------------------------
 
-./configure.sh -c CV183X -p aarch64 -g
+## 任务 -- 图片编码成jpeg并保存
 
-bash ssh-1838.sh
++ 常用命令：
+ 
+  ```
+    cp -r ../ubuntu1604/CV183x .
 
-scp user@192.167.15.58:/home/user/workspace/vca_learn-workspace/video_process/build/test.exe ./test_enc.exe
+    ./configure.sh -c CV183X -p aarch64 -g
 
-export LD_LIBRARY_PATH=/data/picture/VideoProcess/3party/lib:/data/picture/VideoProcess/lib:/mnt/flash/Server/lib/:$LD_LIBRARY_PATH
+    bash ssh-1838.sh
 
-gdbserver :9999 test_enc.exe test_ffmpeg --src MAH00433.mp4
+    scp user@192.167.15.58:/home/user/workspace/vca_learn-workspace/video_process/build/test.exe ./test_enc.exe
 
-scp -r imgs/ user@192.167.15.58:/tmp/
+    export LD_LIBRARY_PATH=/data/picture/VideoProcess/3party/lib:/data/picture/VideoProcess/lib:/mnt/flash/Server/lib/:$LD_LIBRARY_PATH
 
-```
-+ sample_venc_lib.c : 1387 non-bind mode, source frame either comes from file or VPSS
-+ sample_multivenc.c : 437 encode_loop
+    gdbserver :9999 test_enc.exe test_ffmpeg --src MAH00433.mp4
+
+    scp -r imgs/ user@192.167.15.58:/tmp/
+  ```
+
++ 参考例子的编码部分
+  + sample_venc_lib.c : 1387 non-bind mode, source frame either comes from file or VPSS
+  + sample_multivenc.c : 437 encode_loop
+
+### 遇到的基础概念：
+
++ 编码，就是输入一个数据帧，然后将该帧编码成数据包
 
 + 通过接口使用物理设备，
 + 每一个物理设备都有一个设备号，一一对应，指定哪一个设备号就是用哪一个设备
 
 + 编码器，解码器 工作原理和底层实现
   + 一直工作，关于流，没有停止，是一个个数据，只是编译器定义某一段为一帧或一个数据包
+
+### 任务关键点
+
++ 经过测试，
+  + 接收解码出来，不经过VPPS处理的数据帧，编码出来的图片是正常的
+  + 接收解码出来，再经过VPPS处理的数据帧（直接将从VPPS处理通道中取出来的数据帧发送到编码通道），编码出来的图片则是不正常的
+
++ 大致结论：
+  + 在例子中对于接收编码的数据，有两种模式：绑定模式和非绑定模式
+    + 绑定模式：编码器和视频处理子系统（VPSS）绑定，需要取的数据帧是在VPSS通道中直接送入到编码通道中
+    + 非绑定模式：不绑定VPSS，直接将`VIDEO_FRAME_INFO_S`结构体发送到通道中
+  + 之前一直出错的原因在于，对于VPSS处理获取到的数据帧，**是直接送到编码通道中的，而不是通过绑定的方式**，所以晶视已经存在编码器和视频处理子系统设备绑定，可能就不支持直接将VPSS处理后生成的数据帧手动发送到编码器中
 
 ## 概述
 
