--- a/晶视-1838.md
+++ b/晶视-1838.md
@@ -1,7 +1,3 @@
-## 笔记
-
----------------------------------------------------------------------------
-
 ## 任务 -- 图片编码成jpeg并保存
 
 + 常用命令：
@@ -42,11 +38,15 @@
   + 接收解码出来，不经过VPPS处理的数据帧，编码出来的图片是正常的
   + 接收解码出来，再经过VPPS处理的数据帧（直接将从VPPS处理通道中取出来的数据帧发送到编码通道），编码出来的图片则是不正常的
 
-+ 大致结论：
++ 大致结论（V1.0）：
   + 在例子中对于接收编码的数据，有两种模式：绑定模式和非绑定模式
     + 绑定模式：编码器和视频处理子系统（VPSS）绑定，需要取的数据帧是在VPSS通道中直接送入到编码通道中
     + 非绑定模式：不绑定VPSS，直接将`VIDEO_FRAME_INFO_S`结构体发送到通道中
   + 之前一直出错的原因在于，对于VPSS处理获取到的数据帧，**是直接送到编码通道中的，而不是通过绑定的方式**，所以晶视已经存在编码器和视频处理子系统设备绑定，可能就不支持直接将VPSS处理后生成的数据帧手动发送到编码器中
+
++ 
+
+---------------------------------------------------------------------------
 
 ## 概述
 
@@ -87,7 +87,20 @@
   + 存储介质 --》 VDEC --》 VPSS --》 VENC --》 压缩码流或存储介质
   + 存储介质或压缩码流 --》 VDEC --》 VPSS --》VO --》 显示屏
 
-## VDEC 
+--------------------------------------------------------------------------------------------------------------------------------
+
+## 结构体
+
++ VDEC_CHN_ATTR_S
+  + MMF文档：273页
+
+--------------------------------------------------------------------------------------------------------------------------------
+
+## 视频解码(VDEC)
+
+### 概述
+
++ 文档256页
 
 + VDEC模块提供驱动视频解码硬件工作的对应接口，实现**视频解码功能**
 
@@ -103,17 +116,6 @@
   + 按照H.264/H.265视频标准，输入的Stream经解码之后，输出的影像顺序未必等于输入的顺序，因此在播放时会分为Decoding order 和 Display order
     + Decoding order -- 输出影像的顺序等于输入Stream的顺序
     + Display Order  -- 输出影像的顺序等于最后播放的顺序
-
-## 结构体
-
-+ VDEC_CHN_ATTR_S
-  + MMF文档：273页
-
---------------------------------------------------------------------------------------------------------------------------------
-
-## 视频解码(VDEC) -- API参考
-
-+ 文档256页
 
 ### CVI_VDEC_CreateChn
 
@@ -324,6 +326,84 @@
 --------------------------------------------------------------------------------------------------------------------------------
 
 ## 编码
+
+### 概述
+
++ 文档：193页
+
++ 视频编码主要提供视频及时编码，将输入信号源影像经过标准影音编码器作压缩，降
+低数据量，提供应用层影音服务
+
++ 目前有支持的输入源为：
+  + 用户在 `User Mode` 自行输入的影像资料
+  + 视频输入（`VI`）模块收到的影像直接发送到编码器
+  + 视频输入（`VI`）模块收到的影像经视频处理子系统（`VPSS`）发送到编码器
+
++ 目前支持的视频标准为
+  + JPEG
+  + MJPEG
+  + H.264
+  + H.265
+
++ 定义及缩写
+  + `Bitrate`           -- 比特率
+  + `Fixed QP`          -- 固定 QP
+  + `Frame --`          -- 帧
+  + `Packet --`         -- 包
+  + `Frame Buffer`      -- 帧存
+  + `Video Quality`     -- 图像质量
+  + `MB Macroblcok`     -- 宏块
+  + `RC Rate Control`   -- 码率控制器RC Rate Control码率控制器
+  + `Encoded Bitstream` -- 编码流
+  + `VBR Variable Bitrate` -- 可变码率
+  + `CBR Constant Bitrate` -- 固定码率
+  + `QP Quantization Parameter` -- 量化参数
+
++ VENC 模块的输入为待编码的图像，输出为编码后的 Bitstream。 VENC 含有两个子模组，Receiver和Encoder。
+  
++ Receiver
+  + 接收影像的输入
+
++ Encoder
+  + 将收到的影像进行图片及视频编码，转换成 Encoded Bitstream，目前支持的视频标准为
+  + JPEG
+    + 支持的图像格式为
+    + YUV422
+    + YUV420
+  + MJPEG
+    + 支持的图像格式和 JPEG 相同
+  + H.264
+    + 支持的图像格式为
+    + YUV420
+  + H.265
+    + 支持的图像格式为
+    + YUV420
+
++ 视频编码通道
+  + 视频编码通道为视频编码的基本操作单元，内部主要包含VENC相关功能，通道相关设定。 
+  + 系统上可以有多个视频编码通道，各通道独立运作。 
+  + 各通道建立后，用户可按需求设置通道基本参数，如图像分辨率、编码 Bitrate、RC 机制... 等，相关的参数会对VENC初始化
+
++ 码率控制
+  + RC 为 Encoder 中控制 Bitrate 和 Video Quality 的主要模块，主要藉由各视讯标准中的 QP 这个参数，进一步控制影像质量，
+  + 当 QP 变大时，编码出来的资料量会变小，但 Video Quality 会变差; 
+  + 当 QP 变小时，编码出来的资料量会变大，但 VideoQuality 会变好
+  + 视频编码通常会与 RC 同时运作，如果是图片编码 （如 JPEG），因为只有单张图片，不会需要此模块
+
++ Fixed QP
+  + 在统计时间内，影像中的所有 MB 使用同一个 QP 值。
+
++ 编码码流帧配置模式
+  + 压缩后的编码码流，使用CVI_VENC_GetStream取得Encoded Bitstream，相关资讯如下
+  + u32PackCount
+    + 此张 Frame 含有多少个 NAL packet，例如目前压缩格式为 H.264，第一张为 I frame， 此值会为 3 （含 SPS，PPS，1 Slice），第二张 Frame 为 1（含 1Slice)
+  + pstPack
+    + 根据 u32PackCount 的数量，会含有 pstPack[0] ~
+
++ 多编码器并行编码
+  + H.264 和 H.265 支持多路编码，目前默认最多为 8 路并行编码，以下为注意事项
+  + 编码整体性能需要低于硬件设计限制，超过会无法达到设定的 framerate
+  + 所需要的 Frame Buffer 会随着路数的增加成正比增加，DRAM 使用量亦随之增加
 
 ### CVI_VENC_CreateChn
 
