晶视图片编码成jpeg任务基本完成

--- a/晶视-1838.md
+++ b/晶视-1838.md
@@ -44,7 +44,15 @@
     + 非绑定模式：不绑定VPSS，直接将`VIDEO_FRAME_INFO_S`结构体发送到通道中
   + 之前一直出错的原因在于，对于VPSS处理获取到的数据帧，**是直接送到编码通道中的，而不是通过绑定的方式**，所以晶视已经存在编码器和视频处理子系统设备绑定，可能就不支持直接将VPSS处理后生成的数据帧手动发送到编码器中
 
-+ 
++ 结论(V2.0):
+  + 文档有说明，JPEG输入源所支持的格式为：YUV422 YUV420，输入的尺寸和编码器定义要接收的图片尺寸应该相同
+  + 错误的原因是：
+    + 经过VPSS处理后，设置的图片格式为RGB，编码器不支持的
+    + 经过VPSS处理后，图片的尺寸变成了手动设置的尺寸大小，而编码器输入的尺寸还是按照原图的尺寸
+
++ 最终结论(V1.0)
+  + JPEG编码输入的图像格式只能是：YUV420 或 YUV422
+  + JPEG编码输入的图像尺寸和编码器设置接收的图像尺寸要相同
 
 ---------------------------------------------------------------------------
 
