完成了 图解设计模式 书籍的浏览和笔记

--- a/晶视-1838.md
+++ b/晶视-1838.md
@@ -402,11 +402,25 @@
   + 在统计时间内，影像中的所有 MB 使用同一个 QP 值。
 
 + 编码码流帧配置模式
-  + 压缩后的编码码流，使用CVI_VENC_GetStream取得Encoded Bitstream，相关资讯如下
-  + u32PackCount
-    + 此张 Frame 含有多少个 NAL packet，例如目前压缩格式为 H.264，第一张为 I frame， 此值会为 3 （含 SPS，PPS，1 Slice），第二张 Frame 为 1（含 1Slice)
+  + 压缩后的编码码流，使用`CVI_VENC_GetStream`取得`Encoded Bitstream`，相关资讯如下
+  + `u32PackCount`
+    + 此张 `Frame` 含有多少个 `NAL packet`，例如目前压缩格式为 H.264，第一张为 I frame， 此值会为 3 （含 SPS，PPS，1 Slice），第二张 Frame 为 1（含 1Slice)
   + pstPack
     + 根据 u32PackCount 的数量，会含有 pstPack[0] ~
+
++ `NAL`, 全称`Network Abstract Layer`，即网络抽象层
++ 在`H.264/AVC`视频编码标准中，整个系统框架被分为了两个层面：视频编码层面（`VCL`）和网络抽象层面（`NAL`）。
+
++ 网络抽象层面（`Network Abstract Layer,NAL`）,负责格式化数据并提供头信息，以保证数据适合各种信道和存储介质上的传输
+  + `H.264/AVC`标准的特色是将网络提取层的概念涵盖进来，亦即以`NAL`封包为单位的方式来做为`VCL`编译码的运算单位，这样传输层拿到`NAL`封包之后不需要再进行切割，只需附加该传输协议的文件头信息(`adding header only`)就可以交由底层传送出去
+
++ 视频编码层面（`Video Coding Layer，VCL`）,负责有效表示视频数据的内容
+  + 视频压缩的原理是利用影像在时间与空间上存有相似性，这些相似的数据经过压缩算法处理之后，可以将人眼无法感知的部分抽离出来，这些称为视觉冗余(`visual redundancy`)的部分在去除之后，就可以达到视频压缩的目的
+  + H.264/AVC的视讯编码机制是**以图块(block-based)为基础单元**，也就是说先将整张影像分割成许多矩形的小区域，称之为**巨图块(macroblock，MB)**
+  + 再将这些巨图块进行编码，先使用画面内预测(intra-prediction)与画面间预测(inter-prediction)技术，以去除影像之间的相似性来得到所谓的**差余影像(residual)**，
+  + 再将差余影像施以空间转换(transform)与量化(quantize)来去除视觉冗余，最后视讯编码层会输出编码过的比特流(bitstream)
+  + 之后再包装成网络提取层的单元封包(NAL-unit)，经由网络传送到远程或储存在储存媒体中
+  + `H.264/AVC`允许视讯影片以`frame`或是以`filed`的方式来进行编码，两者可以共存，而`frame`可以是`progress`或是`interlace`形式，对同一段影片来说也可使用两者来混合编码，这个特性与`MPEG-2`相同
 
 + 多编码器并行编码
   + H.264 和 H.265 支持多路编码，目前默认最多为 8 路并行编码，以下为注意事项
