--- a/设计模式.md
+++ b/设计模式.md
@@ -1,8 +1,4 @@
-## 参考
-
-+ 《深入设计模式》
-
-+ `https://refactoringguru.cn/design-patterns`
+# 《图解设计模式》
 
 ## 设计模式是什么？
 
@@ -215,4 +211,137 @@
 
 + 类的实现层次结构
   + 抽象类声明了一些抽象方法，定义了接口（API），然后子类负责去实现这些抽象方法。父类的任务是通过声明抽象方法的方式定义接口（API），而子类的任务是实现抽象方法。正式由于父类和子类的这种任务分担，我们才可以编写出具有高可替换性的类
-  + 这里其实也存在层次结构。例如，当子类ConcreteClass实现了父类AbstractClass类的抽象方法时，它们之间就构成了一个小小的层次结构。但是，这里的类的层次结构并非用于增加功能，也就是说，这种层次结构
+  + 这里其实也存在层次结构。例如，当子类ConcreteClass实现了父类AbstractClass类的抽象方法时，它们之间就构成了一个小小的层次结构。但是，这里的类的层次结构并非用于增加功能，也就是说，这种层次结构并非用于方便我们增加新的方法。它的真正作用是帮助我们实现两个任务分担
+    + 父类通过声明抽象方法来定义接口（API）
+    + 子类通过实现具体方法来实现接口（API）
+  + 这种层次结构被称为类的实现层次结构
+
++ 类的层次结构的混杂与分离
+  + 当我们想要编写子类时，就需要先确认自己的意图：**是要增加功能呢？还是要增加实现呢？**
+  + 当类的层次结构只有一层时，功能层次结构与实现层次结构是混杂在一个层次结构中的。这样很容易使类的层次结构变得复杂，也难以透彻地理解类的层次结构。因为自己难以确认究竟应该在类的哪一个层次结构中去增加子类。
+  + 因此，我们需要将“类的功能层次结构”与“类的实现层次结构”分离为两个独立的类层次结构。当然，**如果只是简单地将他们分开，两者之间必然会缺少联系，所以我们还需要在他们之间搭建一座桥梁，而Bridge模式的作用就是搭建这座桥梁**
+
++ Bridge模式的特征是将“类的功能层次结构”与“类的实现层次结构”分离开了。将类的这两个层次结构分离开有利于独立地对他们进行扩展
++ 当想要增加功能时，只需要在“类的功能层次结构”一侧增加类即可，不必对“类的实现层次结构”做任何修改。而且，增加后的功能可以被“所有的实现”使用
+
++ 继承是强关联关系，委托是弱关联关系。在设计类的时候，我们必须充分理解这一点
+
+## Strategy模式
+
++ Strategy的意思是“策略”，指的是与敌军对垒时行军作战的方法。**在编程中，我们可以将它理解为“算法”
+
++ 无论什么程序，其目的都是解决问题。而为了解决问题，我们又需要编写特定的算法。
++ 使用Strategy模式，**可以整体地替换算法的实现部分**。能够整体地替换换发，能让我们轻松地以不同的算法去解决同一个问题，这种模式就是Strategy模式
+
+## Composite模式
+
++ 在计算机的文件系统中，有文件夹的概念（在有些操作系统中，也称为目录）。文件夹里面既可以放入文件，也可以放入其他文件夹（子文件夹）。
++ 在子文件夹中，一样地既可以放入文件，也可以放入子文件夹。可以说，**文件夹是形成了一种容器结构，递归结构**
++ 文件夹和文件有时也被统称为“目录条目”(directory entry)。**在目录条目中，文件夹和文件被当作是同一种对象看待（即一致性）**
+
++ 有时，与将文件夹和文件都作为目录条目看待一样，将容器和内容作为同一种东西看待，可以帮助我们方便地处理问题。
+
++ 能够使容器与内容具有一致性，创造出递归结构的模式就是Composite模式。Composite在英文中是混合物，复合物的意思
+
+## Decorator模式
+
++ 不断地为对象添加装饰的设计模式，被称为Decorator模式。Decorator指的是“装饰物”
+
+## Visitor模式
+
++ 在Visitor模式中，数据结构与处理被分离开来。
++ 编写一个表示“访问者”的类来访问数据结构中的元素，并把对各元素的处理交给访问者类。这样，当需要增加新的处理时，我们只需要编写新的访问者，然后让数据结构可以接受访问者的访问即可
+
++ 双重分发
+  + accept（接受）方法的调用方式：`element.accept(visitor);`
+  + 而visit（访问）方法的调用方式：`visitor.visit(element);`
+  + 对比两个方法会发现，他们是相反的关系。element接受visitor，而visitor又访问element
+  + 在Visitor模式中，ConcreteElement和ConcreteVisitor这两个角色共同决定了实际进行的处理，**这种消息分发的方式一般被称为双重分发(double dispatch)**
+
++ Visitor模式的目的是将处理从数据结构中分离出来。数据结构很重要，它能将元素集合和管理在一起。
++ 但是，需要注意的是，保存数据结构与以数据结构为基础进行处理是两种不同的东西
+
+## Observer模式
+
++ Observer的意思就是“进行观察的人”，也就是“观察者”的意思
++ 在Observer模式中，当观察对象的状态发生变化时，会通知给观察者。Observer模式适用于根据对象状态进行相应处理的场景。
+
++ 利用抽象类和接口从具体类中抽出抽象方法
++ 在将实例作为参数传递至类中，或者在类的字段中保存实例时，不使用具体类型，而是使用抽象类型的接口
++ 这样的实现方式可以帮助我们轻松替换具体类
+
+## State模式
+
++ 在面向对象编程中，是用类表示对象的。
++ 也就是说，程序的设计者需要考虑用类来表示什么东西。类对应的东西可能存在于现实世界中，也可能不存在于现实世界中。对于后者，可能有人看到代码后会感到吃惊：这些东西居然也可以是类啊
+
++ 分而治之
+  + 在编程时，会经常使用分而治之的方针。它非常适用于大规模的复杂处理。当遇到庞大且复杂的问题，不能用一般的方法解决时，会先将问题分解为多个小问题。如果还是不能解决这些小问题，会将它们继续划分为更小的问题，直至可以解决它们为止。
+  + 分而治之，简单而言，就是将一个复杂的大问题分解为多个小问题然后逐个解决。
+
++ 在State模式中，用类来表示状态，并为每一种具体的状态都定义一个相应的类。这样问题就被分解了
++ 换言之，State模式用类表示系统的“状态”，并以此将复杂的程序分解开来
+
++ 在State模式中，我们应该如何编程，以实现“依赖于状态的处理”呢？总结起来有如下两点
+  + 定义接口，声明抽象方法
+  + 定义多个类，实现具体方法
+
+## Flyweight模式
+
++ Flyweight是“轻量级”的意思，指的是拳击比赛中选手体重最轻的登记。顾名思义，该设计模式的作用是为了让对象变“轻”
++ 对象在计算机中是虚拟存在的东西，它的“重”和“轻”并非指实际重量，而是**它们“所使用的的内存大小”**。使用内存多的对象就是“重”对象，使用内存小的对象就是“轻”对象
+
++ 为了能够在计算机中保存该对象，需要分配给其足够的内存空间。当程序中需要大量对象时，如果都是用new关键字来分配内存，将会消耗大量内存空间
++ 关于Flyweight模式，一言以蔽之就是 ： **通过尽量共享示例来避免new出实例**
+
++ Intrinsic与Extrinsic
+  + 应当共享的信息被称作`Intrinsic`信息。Intrinsic的意思是“本质的，固有的”。
+    + 换言之，它指的是不论实例在哪里，不论在什么情况下都不会改变的信息，或者是不依赖于实例的信息
+  + 不应当共享的信息被称作`Extrinsic`信息。Extrinsic的意思是“外在的，非本质的”。
+    + 也就是说，它是当实例的位置，状况发生改变时会变化的信息，或是依赖于实例状态的信息
+
+## Proxy模式
+
++ Proxy是“代理人”的意思，它指的是代替别人进行工作的人。
++ 在面向对象编程中，“本人”和“代理人”都是对象。如果“本人”对象太忙了，有些工作无法自己亲自完成，就将其交给“代理人”对象负责
+
+## Command模式
+
++ 一个类在进行工作时会调用自己或是其他类的方法，虽然调用结果会反应在对象的状态中，但并不会留下工作的历史记录。
++ 这时，如果我们有一个类，用来表示“请进行这项工作”的“命令”就会方便很多。每一项想做的工作就不再是“方法的调用”这种动态处理了，而是一个表示命令的类的实例，即--可以用“物”来标识。要想管理工作的历史记录，只需管理这些实例的集合即可，而且还可以随时再次执行过去的命令，或是将多个过去的命令整合为一个新命令并执行。
++ 在设计模式中，称这样的“命令”为Command模式
+
+## Q&A
+
++ 设计模式能够解决软件开发中的所有问题吗？
+  + 不能，每个设计模式都是用于解决软件开发过程中遇到的问题，但是无论使用什么解决方法，都需要从整体权衡。设计模式并不能解决所有问题
+
++ 怎样才能选择出合适的设计模式呢？
+  + 首先必须要明确知道自己的软件中存在什么样的问题。如果问题不够明确，是无法选择出合适的设计模式的。
+  + **在学习设计模式时，我们要注意该模式“可以解决什么问题”**
+
++ 所谓设计模式，其解决方法都是理所当然的，并不认为有值得关注和重新学习的价值。为什么设计模式很重要呢？
+  + 在向经验丰富的开发人员介绍设计模式时，他们会认为这是“理所当然”的。当然是这样的，因为本来设计模式就是开发人员对反复遇到的问题总结出来的解决办法
+  + 设计模式的重要性在于，**可以帮助大家很快地掌握那些经验丰富的开发人员才具有的知识和经验**
+
++ 设计模式很难背下来
+  + 机械的背下来这些设计模式是没有意义的。重要的是在自己脑海中理解设计模式是怎样解决问题的
+
++ 设计模式对初级开发人员也有帮助吗？
+  + 对于刚刚掌握了编程语言，并逐渐开始慢慢编写一些程序的初级开发人员来说，通过设计模式可以学习到“**在进行面向对象编程时，应该注意什么**”
+  + 例如，通过设计模式，我们可以学到本书中讲解过得可复用性，可替换性，接口（API），继承和委托，抽象化等
+  + 此外，设计模式的知识也会对我们自己使用类库有所帮助。这是因为类库中的许多部分都与设计模式有关
+
++ 除了“设计模式”外，还常听到“模式”这个词，两者的意思是相同的吗？
+  + 严格来讲，两者的意思是有区别的
+  + 不论是在什么领域，给“**在某种场景下重复发生的问题的解决办法**”赋予名字，并整理而成的东西一般都称为“模式”
+  + 设计模式，是适用于软件设计和开发领域的模式，它是模式中的一种
+  + 不过，有时候在软件领域也会将“设计模式”简称为模式
+
+-----------------------------------------------------------------------------------------------------------------------
+
+## 参考书籍
+
++ 《深入设计模式》
+
++ `https://refactoringguru.cn/design-patterns`
