--- a/C-C++02.md
+++ b/C-C++02.md
@@ -48,6 +48,42 @@
 + 头文件：
   + `stdio.h`
 
+## fseek()
+
++ 原型：`int fseek(FILE *stream, long int offset, int whence);`
++ 功能：设置流 `stream` 的文件位置为给定的偏移 `offset`，参数 `offset` 意味着从给定的 `whence` 位置查找的字节数。
++ 参数：
+  + stream -- 这是指向 FILE 对象的指针，该 FILE 对象标识了流
+  + offset -- 这是相对 whence 的偏移量，以字节为单位
+  + whence -- 这是表示开始添加偏移 offset 的位置。它一般指定为下列常量之一：
+    + SEEK_SET  --  文件的开头
+    + SEEK_CUR  --  文件指针的当前位置
+    + SEEK_END  --  文件的末尾
++ 返回值：
+  + 成功 -- 返回零值
+  + 失败 -- 返回非零值
+
+## ftell()
+
++ 原型：`long int ftell(FILE *stream);`
++ 功能：返回给定流 stream 的当前文件位置
++ 参数：
+  + stream -- 这是指向 FILE 对象的指针，该 FILE 对象标识了流
++ 返回值：
+  + 成功  --  该函数返回位置标识符的当前值
+  + 失败  --  返回 -1L，全局变量 errno 被设置为一个正值。
+
+## rewind()
+
++ 原型：`void rewind(FILE *stream);`
++ 功能：设置文件位置为给定流 `stream` 的文件的开头
++ 参数：
+  + `stream` -- 这是指向 `FILE` 对象的指针，该 `FILE` 对象标识了流。
++ 返回值：
+  + 无
++ 头文件：
+  + `stdio.h`
+
 ## access()
 
 + `#include <unistd.h> int access (const char *__name, int __type);`
