--- a/晶视-1838.md
+++ b/晶视-1838.md
@@ -1,4 +1,284 @@
-## 任务 -- 图片编码成jpeg并保存
+# 晶视-1838 适配工作总结
+
+## 任务
+
++ 晶视-1838的概述和系统控制
+
++ 视频解码
+
++ 图像处理（格式转换和缩放）
+
++ 图片编码成jpeg格式并保存
+
++ 视频编码（未完成）
+
++ 推理
+
+---------------------------------------------------------------------------
+
+### 晶视-1838的概述和系统控制
+
+#### 概述
+
++ `CVITEK` 所提供的多媒体软件架构（`Multimedia Framework`， 简称 `MMF`），用以缩短应用程序开发所需的时间。 此架构屏蔽了芯片端的复杂底层设计和差异，对应用程序提供统一且便捷的MMF Programming Interface编程接口。 MMF 包含了以下功能： 
+  + ISP 影像前处理（包含 HDR、去噪、边缘锐化等）
+  + 输入影像撷取及输出
+  + 图像几何校正
+  + H.265/ H.264/JPEG 编解码
+  + 音频撷取及输出
+  + 音频编解码等
+
++ 定义及缩写
+  + MMF   -- `Multimedia Framework`      --  多媒体软件架构
+  + ISP   -- `Image Signal Processor`    --  影像处理处理器
+  + VI    -- `Video Input`               --  影像输入
+  + VPSS  -- `Video Process Sub-System`  --  影像处理子系统
+  + VO    -- `Video Output`              --  影像输出
+  + VDEC  -- `Video Decoder`             --  影像解码
+  + VENC  -- `Video Encoder`             --  影像编码
+  + MIPI  -- `Mobile Industry Processor Interface` -- 移动行业处理器接口
+
++ 内部主要处理流程：
+  + VI 捕捉视频图像，可对其做剪切、影像优化等处理后，再将图像数据传递给VPSS 处理
+  + **VDEC 将编码后的码流解码，再将图像数据传递给 VPSS 处理**
+  + **VPSS 接收 VI 或 VDEC 发送的图像，并可同时输出多个不同分辨率的图像，以供预览、编码或抓拍**
+  + VO 接收 VPSS 处理后的图像，并根据设定的时序输出到显示设备
+  + REGION 可以将用户所指定的位图（Bitmap）作为 OSD 叠加到图像数据上
+
++ 系统绑定
+  + SDK 提供系统绑定接口（`CVI_SYS_Bind`） ，即通过绑定数据源和数据接收者来建立两者之间的关联关系。 **绑定后，数据源生成的数据将自动发送给接收者**。 
+  + 一个数据源可以绑定多个数据接收者，若数据源未绑定，则最终会自动返回视频内存区块池
+  + 同一个数据接收者只能绑定一个数据源
+  + VI 和 VDEC 作为数据源,是以通道为发送者,向其他模块发送数据,用户将设备号置为 0,SDK 不检查输入的设备号
+  + VPSS 作为数据接收者时,是以设备(GROUP)为接收者,接收其他模块发来的数据,用户将通道号置为 0
+  + 其他情况均需指定设备号和通道号
+
++ 智能盒子上的视频文件相关应用
+  + 存储介质 --》 VDEC --》 VPSS --》 VENC --》 压缩码流或存储介质
+  + 存储介质或压缩码流 --》 VDEC --》 VPSS --》VO --》 显示屏
+
+----------------------------------------------------------------------------
+
+#### 系统控制
+
++ 在进行视频编解码的工作之前，需要先处理系统资源，即：系统资源的初始化和去初始化， VB资源的初始化和去初始化
+
++ 首先对系统和VB资源进行初始化，所调用的接口有
+  + CVI_SYS_Exit();
+  + CVI_VB_Exit();
+  + CVI_VB_SetConfig();
+  + CVI_VB_Init();
+  + CVI_SYS_Init();
+
++ 相对应的在程序结尾对系统和VB资源进行去初始化，所调用的接口有
+  + CVI_SYS_Exit();
+  + CVI_VB_ExitModCommPool();
+  + CVI_VB_Exit();
+
++ 注意：
+  + 对VB资源的初始化的步骤很关键，因为整个系统框架都是依赖于视频区块池的，在视频解码时，需要申请和使用视频区块池，在视频编码时，也需要申请和使用视频区块池
+
++ 遗留问题：
+  + 视频编码h.264 -- 有可能与视频区块池的创建和删除有关系
+
+----------------------------------------------------------------------------
+
+### 视频解码
+
++ 获取和设置解码模式
+  + CVI_VDEC_GetModParam
+  + CVI_VDEC_SetModParam
+
++ 为解码通道**属性**结构体赋予初值
+  + VDEC_CHN_ATTR_S
+    + enType  --  解码协议类型枚举值  Video Codec 常使用枚举:PT_JPEG/ PT_H264/PT_H265/ PT_MJPEG
+    + enMode  --  码流发送方式。目前仅支持 VIDEO_MODE_FRAME
+    + u32PicWidth   --  通道支持的解码图像最大宽(以像素为单位)
+    + u32PicHeight  --  通道支持的解码图像最大高(以像素为单位)
+    + u32StreamBufSize  --  码流缓存的大小。(u32StreamBufSize = u32Width * u32Height)
+    + u32FrameBufSize   --  解码图像帧存 buffer 大小。(随 enType 而异)
+    + u32FrameBufCnt    --  解码图像帧存个数。
+    + stVdecVideoAttr   --  视频(H.264/H.265)解码通道属性
+
++ 创建解码通道
+  + CVI_VDEC_CreateChn
+
++ 创建并连接 VB Pool
+  + CVI_VB_CreatePool  -- 创建
+  + 创建VB Pool，需要计算大小，这个大小存放在一个结构体中 -- VB_POOL_CONFIG_S
+    + u32BlkSize  --  视频区块大小
+    + u32BlkCnt   --  视频区块池内的区块数
+    + enRemapMode  --  区块的 memory-map 模式
+  + 计算大小是调用`cvi_buffer.h`文件中的 `VDEC_GetPicBufferSize` 函数
+  + CVI_VDEC_AttachVbPool  -- 连接
+  
++ 获取并设置通道参数
+  + CVI_VDEC_GetChnParam
+  + 定义解码通道参数的结构体 -- VDEC_CHN_PARAM_S
+    + enType  --  常使用枚举:PT_JPEG/PT_H264/PT_H265/PT_MJPEG
+    + u32DisplayFrameNum  --  解码缓存图像的最小帧数
+    + stVdecVideoParam  --  视频(H.264/H.265)解码高级参数
+    + stVdecPictureParam  --  图片(JPEG/MJPEG)解码高级参数
+  + CVI_VDEC_SetChnParam
+
++ 开始接收码流
+  + CVI_VDEC_StartRecvStream
+
++ 发送一个码流
+  + CVI_VDEC_SendStream
+  + 定义视频解码的码流结构体  VDEC_STREAM_S
+    + u32Len  --  码流包的长度。
+    + u64PTS  --  码流包的时间戳
+    + bEndOfFrame   --  当前帧是否结束
+    + bEndOfStream  --  是否发完所有码流
+    + pu8Addr   --   码流包的地址
+    + bDisplay  --  当前帧是否输出显示
+
++ 接收一个码流
+  + CVI_VDEC_GetFrame
+
+----------------------------------------------------------------------------
+
+### 图像处理（格式转换和缩放）
+
++ 设置并创建Group
+  + CVI_VPSS_CreateGrp
+  + 定义VPSS Group属性结构体 -- VPSS_GRP_ATTR_S
+    + u32MaxW  --  输入图像宽度。静态属性,创建 Group 时设定,不可更改
+    + u32MaxH  --  输入图像高度。静态属性,创建 Group 时设定,不可更改
+    + enPixelFormat  --  输入图像像素格式。静态属性,创建 Group 时设定,不可更改
+    + stFrameRate    --  组帧率。
+    + u8VpssDev      --  可指定此 VPSS 组要使用哪个硬件工作
+
++ 设置VPSS通道属性
+  + CVI_VPSS_SetChnAttr
+  + 定义VPSS物理通道属性 -- VPSS_CHN_ATTR_S
+    + u32Width  --  目标图像宽度
+    + u32Height  --  目标图像高度
+    + enVideoFormat  --  目标图像视频格式。
+    + enPixelFormat  --  目标图像像素格式。
+    + stFrameRate  --  帧率控制信息。
+    + bMirror  --  水平镜像使能。
+    + bFlip  --  垂直翻转使能。
+    + u32Depth  --  用户获取通道图像的队列长度。
+    + stAspectRatio  --  幅形比参数。
+    + stNormalize  --  Normalize 以便加速后续 TPU 的运作
+
++ 启动VPSS通道
+  + CVI_VPSS_EnableChn
+
++ 启用VPSS Group
+  + CVI_VPSS_StartGrp
+
++ 向VPSS发送解码出来的数据帧
+  + CVI_VPSS_SendFrame
+
++ 从通道获取一帧处理完成的图像
+  + CVI_VPSS_GetChnFrame
+
++ 保存图片到本地（png格式）
+  + CVI_IVE_CreateHandle
+  + CVI_SYS_MmapCache
+  + CVI_IVE_VideoFrameInfo2Image
+  + CVI_IVE_WriteImage
+  + CVI_SYS_Munmap
+  + CVI_SYS_FreeI
+
++ 释放一帧通道处理完成的图像
+  + CVI_VPSS_ReleaseChnFrame
+
+----------------------------------------------------------------------------
+
+### 图片编码成jpeg格式并保存
+
++ 设置编码模式
+  + CVI_VENC_SetModParam
+
++ 设置通道属性并创建通道
+  + 编码通道属性结构体 -- VENC_CHN_ATTR_S
+    + stVencAttr  --  编码属性
+      + enType    --  负载类型
+      + u32MaxPicWidth   --  影像最大编码宽度
+      + u32MaxPicHeight  --  影像最大编码高度
+      + u32BufSize  --  Encoded bitstream buffer 大小
+      + bByFrame    --  Encoded bitstream 收集方式  CVI_TRUE:以帧为主  CVI_FALSE:以封包为主
+      + u32PicWidth   --  编码影像宽度
+      + u32PicHeight  --  编码影像高度
+      + stAttrJpege   --  JPEG Encoder 属性
+    + stRcAtt    --  码率控制器属性
+    + stGopAttr  -- Gop Mode 类型的结构体
+
++ 设置通道参数
+  + 定义编码通道参数的结构体 -- VENC_CHN_PARAM_S
+    + bColor2Grey    --  开启或关闭一个通道的彩转灰功能
+    + u32Priority    --  编码通道优先级参数。
+    + u32MaxStrmCnt  --  最大码流缓存帧数。
+    + u32PollWakeUpFrmCnt  --  当通道使用超时或阻塞获取码流,编码指定的 帧u32PollWakeUpFrmCnt 之后唤醒阻塞接口。 取值范围:大于 0默认值:1
+    + stCropCfg    --  通道截取(Crop)参数
+    + stFrameRate  --  通道帧率控制参数
+  + CVI_VENC_SetChnParam
+
++ 开启编码通道接收输入图像
+  + CVI_VENC_StartRecvFrame
+
++ 发送图像进行编码
+  + CVI_VENC_SendFrame
+
++ 获取编码的码流
+  + CVI_VENC_GetStream
+  + 定义帧码流类型结构体  VENC_STREAM_S
+    + pstPack  --  码流包结构体
+      + u64PhyAddr  --  物理地址
+      + pu8Addr  --  逻辑地址
+      + u32Len  --  码流包长度。
+      + DataType  -- 码流类型,支持 H.264/JPEG/ H.265 协议类型的数据包 
+      + bFrameEnd  --  帧结束标识。CVI_TRUE:该码流包是该帧的最后一个包。 CVI_FALSE:该码流包不是该帧的最后一个包。
+      + u32Offset  --  码流包中有效数据与码流包首地址 pu8Addr 的偏移。
+      + u64PTS  --  时间戳。单位:us
+      + u32DataNum  --  前码流包(当前包的类型由 DataType 指定)数据中包含其他类型码流包的个数
+      + stPackInfo[8]  --  当前码流包数据中包含其他类型码流包数据信息
+    + u32PackCount  --  码流包数量
+  + 注意：
+    + 获取到的码流数据需要一个内存区域存放，这个内存区域需要手动申请，通过CVI_VENC_QueryStatus接口查询当前帧编码出来的包数，确定所需内存区域大小，通过malloc申请
+
++ 停止编码通道接收输入图像
+  + CVI_VENC_StopRecvFrame
+
++ 保存文件到本地
+  + fopen
+  + fwrite
+  + 使用两个函数，在test中存在
+
++ 释放码流缓存
+  + CVI _ VENC_ReleaseStream
+
+----------------------------------------------------------------------------
+
+### 视频编码
+
++ 设置编码模式
+  + VENC_PARAM_MOD_S （参考图片编码）
+  + CVI_VENC_SetModParam
+
++ 设置通道属性并创建通道
+  + 编码成视频需要设置通道属性和码率属性，因为视频编码通常会与 RC 同时运作，如果是图片编码 （如 JPEG），因为只有单张图片，不会需要此模块
+
++ 设置VB Pool属性并创建VB Pool
+  
++ 视频编码失败的原因大概率在初始化并创建VB Pool步骤，在系统资源初始化时，会对VB Pool配置并初始化，不确定是否影响在此处VB Pool的创建，另外，样例中是通过编码和图像处理子系统绑定来进行视频编码的，且群里说的按照绑定的操作，进行初始化，这个方法还没有尝试，可能成功，是一个解决问题的方向
+
++ 另一个可能出错的原因在将解码出来的码流写入到文件中，当时实验时，是按照编码jpeg图像的思路，只不过将关闭文件的步骤放在了最后，但这样可能会出现一直从文件开头开始写数据，查阅样例代码，有使用标准库 fseek ftell rewind方法，有可能是每一次编码成码流包之后，写入的文件位置不对，此处也是一个解决问题的方向
+
++ 最后一个是在设置码率属性方面，所设置的属性不了解，样例代码中也没有给出明确的测试数值，都是依照自己的估计设定的，很有可能出错，此处也是一个解决问题的方向
+
+----------------------------------------------------------------------------
+
+### 推理
+
++ 此处没有接触，不予记录
+
+----------------------------------------------------------------------------
+## 任务测试
 
 + 常用命令：
  
@@ -54,53 +334,172 @@
   + JPEG编码输入的图像格式只能是：YUV420 或 YUV422
   + JPEG编码输入的图像尺寸和编码器设置接收的图像尺寸要相同
 
----------------------------------------------------------------------------
-
-## 概述
-
-+ `CVITEK` 所提供的多媒体软件架构（`Multimedia Framework`， 简称 `MMF`），用以缩短应用程序开发所需的时间。 此架构屏蔽了芯片端的复杂底层设计和差异，对应用程序提供统一且便捷的MMF Programming Interface编程接口。 MMF 包含了以下功能： 
-  + ISP 影像前处理（包含 HDR、去噪、边缘锐化等）
-  + 输入影像撷取及输出
-  + 图像几何校正
-  + H.265/ H.264/JPEG 编解码
-  + 音频撷取及输出
-  + 音频编解码等
-
-+ 定义及缩写
-  + MMF   -- `Multimedia Framework`      --  多媒体软件架构
-  + ISP   -- `Image Signal Processor`    --  影像处理处理器
-  + VI    -- `Video Input`               --  影像输入
-  + VPSS  -- `Video Process Sub-System`  --  影像处理子系统
-  + VO    -- `Video Output`              --  影像输出
-  + VDEC  -- `Video Decoder`             --  影像解码
-  + VENC  -- `Video Encoder`             --  影像编码
-  + MIPI  -- `Mobile Industry Processor Interface` -- 移动行业处理器接口
-
-+ 内部主要处理流程：
-  + VI 捕捉视频图像，可对其做剪切、影像优化等处理后，再将图像数据传递给VPSS 处理
-  + **VDEC 将编码后的码流解码，再将图像数据传递给 VPSS 处理**
-  + **VPSS 接收 VI 或 VDEC 发送的图像，并可同时输出多个不同分辨率的图像，以供预览、编码或抓拍**
-  + VO 接收 VPSS 处理后的图像，并根据设定的时序输出到显示设备
-  + REGION 可以将用户所指定的位图（Bitmap）作为 OSD 叠加到图像数据上
-
-+ 系统绑定
-  + SDK 提供系统绑定接口（`CVI_SYS_Bind`） ，即通过绑定数据源和数据接收者来建立两者之间的关联关系。 **绑定后，数据源生成的数据将自动发送给接收者**。 
-  + 一个数据源可以绑定多个数据接收者，若数据源未绑定，则最终会自动返回视频内存区块池
-  + 同一个数据接收者只能绑定一个数据源
-  + VI 和 VDEC 作为数据源,是以通道为发送者,向其他模块发送数据,用户将设备号置为 0,SDK 不检查输入的设备号
-  + VPSS 作为数据接收者时,是以设备(GROUP)为接收者,接收其他模块发来的数据,用户将通道号置为 0
-  + 其他情况均需指定设备号和通道号
-
-+ 智能盒子上的视频文件相关应用
-  + 存储介质 --》 VDEC --》 VPSS --》 VENC --》 压缩码流或存储介质
-  + 存储介质或压缩码流 --》 VDEC --》 VPSS --》VO --》 显示屏
-
 --------------------------------------------------------------------------------------------------------------------------------
 
 ## 结构体
 
 + VDEC_CHN_ATTR_S
   + MMF文档：273页
+
+--------------------------------------------------------------------------------------------------------------------------------
+
+## 系统控制
+
++ 系统控制根据各个芯片的特性，完成硬件各个部件的复位、基本初始化工作，同时负责完成MMF系统各个功能模块的初始化、控制、去初始化以及管理MMF系统各个功能模块的工作状态、提供大块物理内存管理等功能。
+
++ 应用程序启动 MMF 功能前，首先必须完成 MMF 系统初始化工作。 同理，应用程序退出 MMF 功能后，也要完成 MMF 系统去初始化工作，释放资源。
+
++ 定义及缩写
+  + MMF（Multimedia Framework 多媒体软件架构）
+  + VB（Video Buffer 影像内存区块）
+  + VI（Video Input 图像输入）
+  + VI_CAP（Video Input Capture 图像输入撷取）
+  + VI_PROC（Video Input Process 图像输入处理）
+  + VPSS（Video Process Sub-System 图像处理子系统）
+  + VO（Video Output 图像输出）
+  + VDEC（Video Decoder 图像解码）
+  + VENC（Video Encoder 影像编码）
+  + AI（Audio Input 音频输入）
+  + AO（Audio Output 音频输出）
+  + ADEC（Audio Decoder 音频解码）
+  + AENC（Audio Encoder 音频编码）
+
++ 视频内存区块池（**配置规则**）
+  + 视频内存区块池主要向各模块（VI/VPSS/VO/VDEC/VENC/GDC...）提供大块物理内存管理功能，负责内存的取得、分配和回收，让物理内存资源在各个媒体处理模块中分享使用，并免除不必要的复制动作。
+  + 多组大小相同、物理地址连续的区块组成一个视频区块池。 必须在系统初始化之前配置公共视频区块池。 根据所需功能的不同，公共区块池的数量、区块的大小和数量应对应有所增减
+  + 视频区块池所需的数量，所需考虑的点如下：
+    + 每多一个 channel 就需要增加两个（ping-pong buffer）。
+    + VO 为条件一的例外，是根据 DisplayBufLen 来决定，最小为 3。
+    + 若 channel 的 u32Depth 不为 0，则需要增加 u32Depth 的数量
+    + 每增加一个 GDC 的功能（fisheye， rotation， etc），就需要加一个。
+  + 在内存空间足够的情况下，可以取最大的空间来建立一个公共视频区块池即可; 若是要精简内存的使用量，建议使用多个不同大小的公共视频区块池
+
++ 所有的视频处理通道都可以从公共视频区块池中获取视频区块用于保存采集的图像
+
++ 系统绑定
+  + SDK 提供系统绑定接口（CVI_SYS_Bind） ，即通过绑定数据源和数据接收者来建立两者之间的关联关系。 
+  + **绑定后，数据源生成的数据将自动发送给接收者**
+  + 一个数据源可以绑定多个数据接收者，若数据源未绑定，则最终会自动返回视频内存区块池。
+  + 目前支持的绑定关系：
+    + VI（数据源）
+      + 数据接收者
+      + VPSS
+      + VENC
+      + VO
+    + VPSS（数据源）
+      + 数据接收者
+      + VO
+      + VENC
+      + VPSS
+    + VDEC（数据源）
+      + 数据接收者
+      + VPSS
+      + VENC
+      + VO
+    + AI（数据源）
+      + 数据接收者
+      + AENC
+      + AO
+    + ADEC（数据源）
+      + 数据接收者
+      + AO
+
+### CVI_SYS_Init
+
++ 原型：`CVI_S32 CVI_SYS_Init(CVI_VOID);`
++ 功能：初始化系统。 包括视频输入输出、视频编解码、视频叠加区域、视频处理、音频输入输出等模块都会被初始化 。
++ 参数：
+  + 无
++ 返回值：
+  + 成功  --  0
+  + 失败  --  非0，参见错误码
++ 需求：
+  + 头文件：cvi_sys.h, cvi_comm_sys.h
+  + 库文件：libsys.a
++ 注意：
+  + 由于 MMF 系统的正常运行依赖于区块池，因此需要先调用 `CVI_VB_Init` 初始化区块池，再初始化 MMF 系统，否则会导致功能运行异常。
+  + 在未调用去初始化前，如果多次初始化，仍会返回成功，但实际上系统不会对MMF 的运行状态有任何影响
+
+### CVI_SYS_Exit
+
++ 原型：`CVI_S32 CVI_SYS_Exit(CVI_VOID);`
++ 功能：去初始化系统。 包括视频输入输出、视频编解码、视频叠加区域、视频处理、音频输入输出等模块都会被销毁或禁用 。
++ 参数：
+  + 无
++ 返回值：
+  + 成功  --  0
+  + 失败  --  非0，参见错误码
++ 需求：
+  + 头文件：cvi_sys.h, cvi_comm_sys.h
+  + 库文件：libsys.a
++ 注意：
+  + 去初始化时，如果有阻塞在 MMF 上的用户进程，则去初始化会失败。 
+  + 如果所有阻塞在 MMF 上的调用都返回，则可以成功去初始化
+
+### CVI_VB_Init
+
++ 原型：`CVI_S32 CVI_VB_Init(CVI_VOID);`
++ 功能：初始化 MMF 视频区块池。
++ 参数：
+  + 无
++ 返回值：
+  + 成功  --  0
+  + 失败  --  非0，参见错误码
++ 需求：
+  + 头文件：cvi_sys.h, cvi_comm_sys.h
+  + 库文件：libsys.a
++ 注意：
+  + 必须先调用 `CVI_VB_SetConfig` 配置配置区块池属性，再初始化，否则初始化会失败
+  + 如果多次初始化,仍会返回成功,但实际上系统不会对MMF 的运行状态有任何影响。
+
+### CVI_VB_Exit
+
++ 原型：`CVI_S32 CVI_VB_Exit(CVI_VOID);`
++ 功能：去初始化 MMF 视频区块池
++ 参数：
+  + 无
++ 返回值：
+  + 成功  --  0
+  + 失败  --  非0，参见错误码
++ 需求：
+  + 头文件：cvi_sys.h, cvi_comm_sys.h
+  + 库文件：libsys.a
++ 注意：
+  + 必须先调用 CVI_SYS_Exit 去初始化 MMF 系统，再去初始化区块池，否则返回失败
+  + 可以反复去初始化,不返回失败
+
+### CVI_VB_SetConfig
+
++ 原型：`CVI_S32 CVI_VB_SetConfig(const VB_CONFIG_S *pstVbConfig);`
++ 功能：设置 MMF 视频区块池属性
++ 参数：
+  + `pstVbConfig`  --  视频区块池属性指针  --  输入
++ 返回值：
+  + 成功  --  0
+  + 失败  --  非0，参见错误码
++ 需求：
+  + 头文件：cvi_sys.h, cvi_comm_sys.h
+  + 库文件：libsys.a
++ 注意：
+  + 只能在系统处于未初始化的状态下，才可以设置区块池属性，否则会返回失败
+  + **video buffer 根据不同的应用场景需要不同的配置。 配置规则参见视频区块池（配置规则）**
+  + 公共区块池中每个区块的大小应根据当前图像像素格式以及图像是否压缩而有所不同。 具体分配大小请参考 VB_CONFIG_S 结构体中的描述。
+
+### CVI_VB_GetConfig
+
++ 原型：`CVI_S32 CVI_VB_GetConfig(VB_CONFIG_S *pstVbConfig);`
++ 功能：获取 MMF 视频区块池属性
++ 参数：
+  + `pstVbConfig`  --  视频区块池属性指针  --  输出
++ 返回值：
+  + 成功  --  0
+  + 失败  --  非0，参见错误码
++ 需求：
+  + 头文件：cvi_sys.h, cvi_comm_sys.h
+  + 库文件：libsys.a
++ 注意：
+  + 必须先调用 CVI_VB_SetConfig 设置MMF视频区块池属性
+
 
 --------------------------------------------------------------------------------------------------------------------------------
 
@@ -125,9 +524,53 @@
     + Decoding order -- 输出影像的顺序等于输入Stream的顺序
     + Display Order  -- 输出影像的顺序等于最后播放的顺序
 
+### CVI_VDEC_SetModParam
+
++ 原型：`CVI_S32 CVI_VDEC_SetModParam(const VDEC_MOD_PARAM_S *pstModParam);`
++ 功能：设置解码模式
++ 参数：
+  + pstModParam  --  解码模式参数结构体指针  --  输入
++ 返回值：
+  + CVI_SUCCESS 成功
+  + 非0         失败，其值为错误码
++ 需求：
+  + cvi_vdec.h  cvi_comm_video.h  cvi_comm_vdec.h
+  + libvdec.so / libvdec.a
++ 注意：
+  + 这个接口和参数的结构体在文档中没有
+  + 结构体：
+    ```
+      typedef struct _VDEC_MOD_PARAM_S 
+      {
+      	VB_SOURCE_E enVdecVBSource; /* RW, Range: [1, 3];  frame buffer mode  */
+      	CVI_U32 u32MiniBufMode; /* RW, Range: [0, 1];  stream buffer mode */
+      	CVI_U32 u32ParallelMode; /* RW, Range: [0, 1];  VDH working mode   */
+      	VDEC_VIDEO_MOD_PARAM_S stVideoModParam;
+      	VDEC_PICTURE_MOD_PARAM_S stPictureModParam;
+      } VDEC_MOD_PARAM_S;
+    ``` 
+  + 目前能够使用的模式为：
+    + `stModParam.enVdecVBSource = VB_SOURCE_USER;`
+
+### CVI_VDEC_GetModParam
+
++ 原型：`CVI_S32 CVI_VDEC_GetModParam(VDEC_MOD_PARAM_S *pstModParam);`
++ 功能：获取当前解码模式
++ 参数：
+  + pstModParam  --  解码模式参数结构体指针  --  **输出**
++ 返回值：
+  + CVI_SUCCESS 成功
+  + 非0         失败，其值为错误码
++ 需求：
+  + cvi_vdec.h  cvi_comm_video.h  cvi_comm_vdec.h
+  + libvdec.so / libvdec.a
++ 注意：
+  + 这个接口和参数的结构体在文档中没有
+
 ### CVI_VDEC_CreateChn
 
 + 原型：`CVI_S32 CVI_VDEC_CreateChn(VDEC_CHN VdChn, const VDEC_CHN_ATTR_S *pstAttr);`
++ 功能：创建视频解码通道
 + 参数：
   + CVI_S32  -- typedef int CVI_S32
   + VdChn  --  输入， 视频解码通道号
@@ -396,10 +839,29 @@
   + RC 为 Encoder 中控制 Bitrate 和 Video Quality 的主要模块，主要藉由各视讯标准中的 QP 这个参数，进一步控制影像质量，
   + 当 QP 变大时，编码出来的资料量会变小，但 Video Quality 会变差; 
   + 当 QP 变小时，编码出来的资料量会变大，但 VideoQuality 会变好
-  + 视频编码通常会与 RC 同时运作，如果是图片编码 （如 JPEG），因为只有单张图片，不会需要此模块
+  + **视频编码通常会与 RC 同时运作，如果是图片编码 （如 JPEG），因为只有单张图片，不会需要此模块**
 
 + Fixed QP
   + 在统计时间内，影像中的所有 MB 使用同一个 QP 值。
+
++ CBR
+  + CBR（Constant Bit Rate）固定码率，动态控制 QP，使得 Encoded Bitstream 在设定的时间区间内，维持在想要的 bitrate。 主要的参数如下
+  + u32StatTime Bitrate 统计时间
+    + 单位时间为秒 （second），encoder 会在设定时间内统计 Bitrate 进而调整影像质量，符合想要的 Bitrate。 当此值愈小时，统计区间小，影像品值变化幅度会相对比较大，每一张 Frame 压缩完后，对接下来的压缩有较大的影响，视频质量比较不稳定。 此值大时，统计区间大，每一张 Frame 压缩完后的影响程度比较小，影像变化的幅度比较小，视频质量比较稳定。
+
++ VBR
+  + VBR（Variable Bit Rate）可变码率，允许码率在设定的统计时间内，动态调整整体Bitrate，可使得影像质量相对稳定。
+  + u32MaxBitRate 最大码率
+    + 设定在统计时间内，最大可使用的码率
+  + u32MinQp  最小码率
+    + 设定最小可使用的 MB QP，限制影像的最佳品质，不会使用过高的 Bitrate
+
++ GOP 结构
+  + NormalP 的 GOP 结构如下
+    + IDR 帧出现周期为 u32Gop
+  + SmartP 的 GOP 结构如下
+    + VI(Virtual I Frame) 帧出现周期为 u32Gop， 该帧只向前参考邻近之 IDR 帧
+    + IDR 帧出现周期为 u32BgInterval， 该 IDR 帧为长期参考帧
 
 + 编码码流帧配置模式
   + 压缩后的编码码流，使用`CVI_VENC_GetStream`取得`Encoded Bitstream`，相关资讯如下
@@ -634,4 +1096,3 @@
   + **该函数将获得的图像信息保存在 pstvideoFrame 里面,并包含了图像的虚拟地址和物理地址**
 
 + `VENC_CHN_ATTR_S::VENC_ATTR_S`:决定编码属性,此属性决定编码协议并赋值设定对应宽，高
-
