--- a/C-C++01.md
+++ b/C-C++01.md
@@ -26,8 +26,8 @@
 
 + 字符串是存储在内存的连续字节中的一系列字符。
 + C++处理字符串的方式有两种：
-  + 第一种来自C语言，常被称为C-风格字符串(`C-style string`)
-  + 另一种基于`string`类库的方法
+  - 第一种来自C语言，常被称为C-风格字符串(`C-style string`)
+  - 另一种基于`string`类库的方法
 
 + C-风格字符串
   + **C-风格字符串具有一种特殊的性质：以空字符(null character)结尾，空字符被写作`\0`**，其ASCII码为0，用来标记字符串的结尾。例如
@@ -64,7 +64,6 @@
 + C把数组看作是派生类型，因为数组是建立在其他类型的基础上。
 + 也就是说，无法简单地声明一个数组。**在声明数组时必须说明其元素的类型**，例如int类型的数组， float类型的数组或者其他类型的数组。
   + 所谓的其他类型也可以是数据类型，这种情况下，创建的是数组的数组，或者称为二维数组
-
 
 ## **指针**
 
