--- a/C-C++02.md
+++ b/C-C++02.md
@@ -5,6 +5,10 @@
   + size   -- 元素的大小
 + malloc和calloc之间的不同点是:malloc不会设置内存为零,而calloc会**设置分配的内存为零**
 
+## `stdio.h` 库宏
+
++ 
+
 ## fopen()
 
 + 原型： `FILE *fopen(const char *filename, const char *mode);`
