--- a/C-C++02.md
+++ b/C-C++02.md
@@ -7,7 +7,102 @@
 
 ## `stdio.h` 库宏
 
-+ 
++ `NULL`    -- 这个宏是一个空指针常量的值。
++ `_IOFBF`、`_IOLBF` 和 `_IONBF` -- 这些宏扩展了带有特定值的整型常量表达式，并适用于 `setvbuf` 函数的第三个参数
++ `BUFSIZ`  -- 这个宏是一个整数，该整数代表了 `setbuf` 函数使用的缓冲区大小  
++ `EOF`     --  这个宏是一个表示已经到达文件结束的负整数
++ `FOPEN_MAX`     --  这个宏是一个整数，该整数代表了系统可以同时打开的文件数量。
++ `FILENAME_MAX`  --  这个宏是一个整数，该整数代表了字符数组可以存储的文件名的最大长度。如果实现没有任何限制，则该值应为推荐的最大值
++ `L_tmpnam`  --  这个宏是一个整数，该整数代表了字符数组可以存储的由 `tmpnam` 函数创建的临时文件名的最大长度
++ `SEEK_CUR`、`SEEK_END` 和 `SEEK_SET` -- 这些宏是在 `fseek` 函数中使用，用于在一个文件中定位不同的位置
++ `TMP_MAX`   --  这个宏是 `tmpnam` 函数可生成的独特文件名的最大数量
++ `stderr`、`stdin` 和 `stdout`  --  这些宏是指向 `FILE` 类型的指针，分别对应于标准错误、标准输入和标准输出流
+
+## `stdio.h`库函数
+
++ `int fclose(FILE *stream);`     --  关闭流 `stream` 。刷新所有的缓冲区。
+
++ `void clearerr(FILE *stream);`  --  清除给定流 `stream` 的文件结束和错误标识符。
+
++ `int feof(FILE *stream);`       --  测试给定流 `stream` 的文件结束标识符
+
++ `int ferror(FILE *stream);`     --  测试给定流 `stream` 的错误标识符
+
++ `int fflush(FILE *stream);`     --  刷新流 `stream` 的输出缓冲区
+
++ `int fgetpos(FILE *stream, fpos_t *pos);`  -- 获取流 `stream` 的当前文件位置，并把它写入到 `pos`
+
++ `FILE *fopen(const char *filename, const char *mode);`   -- 使用给定的模式 `mode` 打开 `filename` 所指向的文件
+
++ `size_t fread(void *ptr, size_t size, size_t nmemb, FILE *stream);`     --  从给定流 `stream` 读取数据到 `ptr` 所指向的数组中
+
++ `FILE *freopen(const char *filename, const char *mode, FILE *stream);`  --  把一个新的文件名 `filename` 与给定的打开的流 `stream` 关联，同时关闭流中的旧文件
+  
++ `	int fseek(FILE *stream, long int offset, int whence);` -- 设置流 `stream` 的文件位置为给定的偏移 `offset` ，参数 `offset` 意味着从给定的 `whence` 位置查找的字节数
+  
++ `int fsetpos(FILE *stream, const fpos_t *pos);`  --  设置给定流 `stream` 的文件位置为给定的位置。参数 `pos` 是由函数 `fgetpos` 给定的位置
+
++ `long int ftell(FILE *stream);`     -- 返回给定流 `stream` 的当前文件位置
+
++ `size_t fwrite(const void *ptr, size_t size, size_t nmemb, FILE *stream);`  --  把 `ptr` 所指向的数组中的数据写入到给定流 `stream` 中。
+
++ `int remove(const char *filename);` --  删除给定的文件名 `filename` ，以便它不再被访问
+
++ `int rename(const char *old_filename, const char *new_filename);`  --  把 `old_filename` 所指向的文件名改为 `new_filename`
+
++ `void rewind(FILE *stream);`  --  设置文件位置为给定流 `stream` 的文件的开头
+
++ `void setbuf(FILE *stream, char *buffer);`  --  定义流 `stream` 应如何缓冲。
+
++ `int setvbuf(FILE *stream, char *buffer, int mode, size_t size);`  --  另一个定义流 `stream` 应如何缓冲的函数
+
++ `FILE *tmpfile(void);`  --  以二进制更新模式(`wb+`)创建临时文件
+
++ `char *tmpnam(char *str);`  --  生成并返回一个有效的临时文件名，该文件名之前是不存在的
+
++ `int fprintf(FILE *stream, const char *format, ...);`  --  发送格式化输出到流 `stream` 中
+
++ `int printf(const char *format, ...);`  --  发送格式化输出到标准输出 `stdout`
+
++ `int sprintf(char *str, const char *format, ...);`  --  发送格式化输出到字符串
+
++ `int vfprintf(FILE *stream, const char *format, va_list arg);`  --  用参数列表发送格式化输出到流 `stream` 中
+
++ `int vprintf(const char *format, va_list arg);`  --  使用参数列表发送格式化输出到标准输出 `stdout`
+
++ `int vsprintf(char *str, const char *format, va_list arg);`  --  使用参数列表发送格式化输出到字符串
+
++ `int fscanf(FILE *stream, const char *format, ...);`  --  从流 `stream` 读取格式化输入
+
++ `int scanf(const char *format, ...);`  --  从标准输入 `stdin` 读取格式化输入
+
++ `int sscanf(const char *str, const char *format, ...);`  --  从字符串读取格式化输入
+
++ `int fgetc(FILE *stream);`  --  从指定的流 `stream` 获取下一个字符（一个无符号字符），并把位置标识符往前移动
+
++ `char *fgets(char *str, int n, FILE *stream);`  --  从指定的流 `stream` 读取一行，并把它存储在 `str` 所指向的字符串内。当读取 (n-1) 个字符时，或者读取到换行符时，或者到达文件末尾时，它会停止，具体视情况而定
+  
++ `int fputc(int char, FILE *stream);`  --  把参数 `char` 指定的字符（一个无符号字符）写入到指定的流 `stream` 中，并把位置标识符往前移动
+
++ `int fputs(const char *str, FILE *stream);`  --  把字符串写入到指定的流 `stream` 中，但不包括空字符
+
++ `int getc(FILE *stream);`  --  从指定的流 `stream` 获取下一个字符（一个无符号字符），并把位置标识符往前移动
+
++ `int getchar(void);`  --  从标准输入 `stdin` 获取一个字符（一个无符号字符）
+
++ `char *gets(char *str);`  --  从标准输入 `stdin` 读取一行，并把它存储在 `str` 所指向的字符串中。当读取到换行符时，或者到达文件末尾时，它会停止，具体视情况而定
+  
++ `int putc(int char, FILE *stream);`  --  把参数 `char` 指定的字符（一个无符号字符）写入到指定的流 `stream` 中，并把位置标识符往前移动
+
++ `int putchar(int char);`  --  把参数 `char` 指定的字符（一个无符号字符）写入到标准输出 `stdout` 中
+
++ `int puts(const char *str);`  --  把一个字符串写入到标准输出 `stdout` ，直到空字符，但不包括空字符。换行符会被追加到输出中
+
++ `int ungetc(int char, FILE *stream);`  --  把字符 `char`（一个无符号字符）推入到指定的流 `stream` 中，以便它是下一个被读取到的字符
+
++ `void perror(const char *str);`  --  把一个描述性错误消息输出到标准错误 stderr。首先输出字符串 `str` ，后跟一个冒号，然后是一个空格
+
++ `int snprintf(char *str, size_t size, const char *format, ...);`  --  格式字符串到 `str` 中
 
 ## fopen()
 
@@ -426,16 +521,18 @@
 
 ## __sync_fetch_and_add系列
 
-+ 作用：提供多线程下变量的加减和逻辑运算的原子操作  
++ 作用：**提供多线程下变量的加减和逻辑运算的原子操作**
+  
 + 存在原因：
-  + `count++`这种操作不是原子的。一个自加操作，本质上是分成三步的：
+  - `count++` 这种操作不是原子的。一个自加操作，本质上是分成三步的：
     + 从缓存取到寄存器
     + 在寄存器加1
     + 存入缓存
-  + 由于时序的因素，多个线程操作同一个全局变量，会出现问题。这也是并发编程的难点。在目前多核条件下，这种困境会越来越彰显出来
-  + 最简单的处理办法就是加锁保护。
-  + 使用`__sync_fetch_and_add`，对于多线程对全局变量进行自加，就不用线程锁了
-  + `__sync_fetch_and_add`系列的处理速度是线程锁的6-7倍
+  - 由于时序的因素，多个线程操作同一个全局变量，会出现问题。这也是并发编程的难点。在目前多核条件下，这种困境会越来越彰显出来
+  - 最简单的处理办法就是加锁保护。
+  - 使用`__sync_fetch_and_add`，对于多线程对全局变量进行自加，就不用线程锁了
+  - `__sync_fetch_and_add`系列的处理速度是线程锁的6-7倍
+  
 + `__sync_fetch_and_add`系列一共有是十二个函数，有加/减/与/或/异或/等函数的**原子性操作函数**
 + `__sync_fetch_and_add`，顾名思义，先fetch，然后自加，返回的是自加之前的数值。
   + 以`count = 4`为例，调用`__sync_fetch_and_add(&count, 1)`之后，返回值是4，然后，count变成了5
