add test folder, and merge test codes to a cpp file

--- a/C-C++02.md
+++ b/C-C++02.md
@@ -5,6 +5,19 @@
   + size   -- 元素的大小
 + malloc和calloc之间的不同点是:malloc不会设置内存为零,而calloc会**设置分配的内存为零**
 
+## strcpy()
+
++ 原型：`char *strcpy(char *dest, const char *src);`
++ 功能：把 `src` 所指向的字符串复制到 `dest`
++ 参数：
+  + dest  --  指向用于存储复制内容的目标数组
+  + src   --  要复制的字符串
++ 返回值：
+  + 成功  --  该函数返回一个指向最终的目标字符串 dest 的指针
+  + 失败  --  NULL
++ 注意：
+  + 如果目标数组 dest 不够大，而源字符串的长度又太长，可能会造成缓冲溢出的情况
+
 ## `stdio.h` 库宏
 
 + `NULL`    -- 这个宏是一个空指针常量的值。
@@ -219,9 +232,13 @@
 
 ## getenv()
 
-+ `#include <stdlib.h>  char* getenv (const char* name);`
-+ 检索包含名称被指定为参数的环境变量的值的C字符串。如果请求的变量不是环境列表的一部分，则该函数返回一个空指针。(Retrieves a C-string containing the value of the environment variable whose name is specified as argument. If the requested variable if not part of the environment list, the function returns a null pointer.)
-+ 详细信息：`https://cplusplus.com/reference/cstdlib/getenv/`
++ 原型：`#include <stdlib.h>  char* getenv (const char* name);`
++ 功能：搜索 name 所指向的环境字符串，并返回相关的值给字符串，
++ 参数：
+  + name  --  包含被请求变量名称的C字符串
++ 返回值：
+  + 成功  --  返回一个以NULL结尾的字符串，该字符串为被请求环境变量的值
+  + 失败  --  返回NULL
 
 ## to_string()
 
