--- a/C-C++02.md
+++ b/C-C++02.md
@@ -746,3 +746,13 @@
     + `pFunc = &printHello;`
     + `(*pFunc)(110);`
   + 以后其他地方的程序需要声明类似的函数指针，只需要使用：`PrintHelloHandle pFuncOther;`
+
+## pair
+
++ 类模块：`template<class T1,class T2> struct pair`
++ 功能： `pair` 将一对值组合成一个值,这一对值可以具有不同的数据类型（T1和T2）,两个值可以分别用pair的两个公有函数first和second访问。
++ 参数：
+  + T1  --  第一个值的数据类型
+  + T2  --  第二个值的数据类型
++ 需求：
+  + 头文件:`#include <utility>   // std::pair, std::make_pair`
