--- a/C-C++01.md
+++ b/C-C++01.md
@@ -391,9 +391,9 @@
 
 ## 构造函数和析构函数
 
-+ 构造函数初始化对象。换句话说，**它创建供成员函数进行操作的环境**。创建环境时需要获取资源，如文件，锁或者一些内存，这些资源在使用后必须释放。因此，某些类需要一个函数，在对象销毁时保证它会被调用，就像在对象创建时保证构造函数会被调用一样。这样的函数就必然被称为**析构函数(destructor)**
++ **构造函数初始化对象**。换句话说，它创建供成员函数进行操作的环境。创建环境时需要获取资源，如文件，锁或者一些内存，这些资源在使用后必须释放。因此，某些类需要一个函数，在对象销毁时保证它会被调用，就像在对象创建时保证构造函数会被调用一样。这样的函数就必然被称为**析构函数(destructor)**
 
-+ 析构函数不接受参数，每个类只能由一个析构函数。当一个自动变量离开作用域时，自由空间中的一个对象被释放时，等等时刻，析构函数会被隐式调用。只有在极少数情况下用户才需要显式调用析构函数。
++ **析构函数不接受参数**，每个类只能由一个析构函数。当一个自动变量离开作用域时，自由空间中的一个对象被释放时，等等时刻，析构函数会被隐式调用。只有在极少数情况下用户才需要显式调用析构函数。
   
 + 构造函数负责分配元素空间并正确地初始化Vector成员，析构函数则负责释放空间。这就是所谓的**数据句柄模型（handle-to-data model）**，常用来管理在对象声明周期中大小会发生变化的数据。在构造函数中请求资源，然后在析构函数中释放他们的技术称为**资源获取即初始化(Resource Acquisition Is Initialization),简称RAII**，它使得我们得以规避”裸new操作“的风险
 
