--- a/C-C++02.md
+++ b/C-C++02.md
@@ -1,9 +1,42 @@
 ## calloc()
 
-+ C库函数`void *calloc(size_t nitems, size_t size)`分配所需的内存空间,并返回一个指向它的指针
++ 原型：`void *calloc(size_t nitems, size_t size)`
++ 功能：分配所需的内存空间,并返回一个指向它的指针
++ 参数：
   + nitems -- 要被分配的元素的个数
   + size   -- 元素的大小
-+ malloc和calloc之间的不同点是:malloc不会设置内存为零,而calloc会**设置分配的内存为零**
++ 注意：
+  + malloc和calloc之间的不同点是:malloc不会设置内存为零,而calloc会**设置分配的内存为零**
+
+## atoi()
+
++ 原型：`int atoi(const char *str);`
++ 功能：把参数 str 所指向的字符串转换为一个整数（类型为 int 型）
++ 参数：
+  + `str`  -- 要转换为整数的字符串
++ 返回值：
+  + 成功  --  返回转换后的整数
+  + 失败  --  返回零
+
+## atol()
+
++ 原型：`long int atol(const char *str);`
++ 功能：把参数 str 所指向的字符串转换为一个长整数（类型为 long int 型）
++ 参数：
+  + `str` -- 要转换为长整数的字符串
++ 返回值
+  + 成功  --  返回转换后的长整数
+  + 失败  --  返回零
+
+## atof()
+
++ 原型：`double atof(const char *str);`
++ 功能：把参数 str 所指向的字符串转换为一个浮点数（类型为 double 型）
++ 参数：
+  + `str`  --  要转换为浮点数的字符串
++ 返回值：
+  + 成功  --  返回转换后的双精度浮点数
+  + 失败  --  返回零(0.0)
 
 ## strcpy()
 
@@ -198,10 +231,8 @@
 
 ## access()
 
-+ `#include <unistd.h> int access (const char *__name, int __type);`
-
++ 原型：`int access (const char *__name, int __type);`
 + 功能：确定文件或文件夹的访问权限。即，检查某个文件的存取方式，例如说是只读方式，只写方式等。如果指定的存取方式有效，则函数返回0，否则返回-1
-
 + 参数
   + `name` -- 文件路径
   + `type` -- 判断参数
@@ -209,17 +240,21 @@
     + `W_OK 2` -- 写权限
     + `X_OK 1` -- 执行权限
     + `F_OK 0` -- 是否存在
++ 需求：
+  + 头文件：`#include <unistd.h>`
 
 ## remove()
 
-+ `#include <stdio.h>  int remove(const char* __filename);`
-
-+ 通过文件名称删除文件
++ 原型：`int remove(const char* __filename);`
++ 功能：通过文件名称删除文件
++ 参数：
+  + `filename`  --  指向文件名的字符指针
++ 需求：
+  + 头文件：`#include <stdio.h>`
 
 ## rename()
 
 + `#include <stdio.h> int rename(const char* old, const char* new);`
-
 + 重命名一个文件
 
 ## assert()
@@ -242,13 +277,13 @@
 
 ## to_string()
 
-+ 函数声明：`string to_string(int val);`
++ 原型：`string to_string(int val);`
 + 功能:一个字符串对象，包含val作为字符序列的表示形式
 + 参数：`val` ， 数值
 
 ## strcat()
 
-+ 函数声明：`char* strcat(char* destination, const char* source);`
++ 原型：`char* strcat(char* destination, const char* source);`
 + 功能：将源字符串的副本附加到目标字符串。目标中的终止空字符被源的第一个字符覆盖，并且在目标中两者连接形成的新字符串的末尾包含一个空字符。
 + 参数：
   + `destination` ： 指向目标数组的指针，它应该包含一个C字符串，并且足够大以包含连接的结果字符串。(Pointer to the destination array, which should contain a C string, and be large enough to contain the concatenated resulting string.)
@@ -256,7 +291,7 @@
 
 ## puts()
 
-+ 函数声明：`int puts(const char* str);`
++ 原型：`int puts(const char* str);`
 + 功能：将字符串写入标准输出。将str指向的C字符串写入标准输出(stdout)并且附加一个换行符(`'\n'`)。
   + 该函数从指定的地址（str）开始复制，直到到达终止空字符（'\0')。此终止空字符不会复制到流中
   + 注意，puts不仅与fputs不同，它使用标准输出作为目标，而且它还在末尾自动附加一个环行符（fputs则没有）
@@ -268,7 +303,7 @@
 
 ## sprintf()
 
-+ `#include <stdio.h>  int sprintf(char *str, const char* format, ... )`
++ 原型：` int sprintf(char *str, const char* format, ... )`
 + 功能：发送格式化输出到str所指向的字符串
 + 参数：
   + `str`：这是指向一个字符数组的指针，该数组存储了C字符串
@@ -293,18 +328,17 @@
 + 返回值：
   + 如果成功，则返回写入的字符总数，不包括字符串追加在字符串末尾的空字符
   + 如果失败，则返回一个负数
-
++ 需求：
+  + 头文件：`#include <stdio.h>`
+  
 ## snprintf()
 
-+ `int snprintf(char* s, size_t n, const char* format, ...);`
-
++ 原型：`int snprintf(char* s, size_t n, const char* format, ...);`
 + 功能：将格式化的输出写入大小适中的缓冲区
-
 + 参数：
   + `s` -- 指向存储C字符串的缓冲区的指针。这个缓冲区的大小至少要能存储`n`个字符
   + `n` -- 在缓冲区存储的最大字节数。通常，生成的字符串最大长度为`n-1`，留下一个空间存储空字符
   + `format` -- 和printf格式一样，C字符串要存储的格式
-
 + 返回值
   + 如果写入正常，返回被写入的字符数
   + 如果错误，返回一个负数
@@ -320,17 +354,19 @@
 
 ## c_str()
 
-+ 返回指向包含以null结尾的字符序列（即C字符串）的数组的指针，该字符序列表示字符串对象的当前值。(Returns a poointer to an array that contains a null-terminated sequence of characters (i.e, a C-string) representing the current vcalue of the string object)
-+ 这个数组包含构成字符串对象值的相同字符序列，以及末尾的附加终止空字符`\0` (This array includes the same sequence of characters that make up the value of the string object plus an additional terminating null-character ('\0') at the end)
-+ 返回值：指向字符串对象值的C字符串表示形式的指针。(A pointer to the c-string representation of the string object's vcalue .)
++ 返回指向包含以null结尾的字符序列（即C字符串）的数组的指针，该字符序列表示字符串对象的当前值。
++ 这个数组包含构成字符串对象值的相同字符序列，以及末尾的附加终止空字符`\0` 
++ 返回值：指向字符串对象值的C字符串表示形式的指针。
 
 ## strtok()
 
 ## strtol()
 
-+ `#include <stdlib.h>  long int strtol (const char* str, char** endptr, int base);`
-+ 解析C字符串str，将其内容解释为指定基数的整数，该基数作为long int返回。如果endptr不是空指针，该函数还将endptr的值设置为指向数字后的第一个字符。(Parses the C-string str interpreting its content as an integral number of the specified base, which is returned as a long int value. If endptr is not a null pointer, the function also sets the value of endptr to point to the first character after the number.)
-+ 该函数首先根据需要丢弃尽可能多的空白字符，直到找到第一个非空白字符。然后，从这个字符开始，按照依赖于基本参数的语法获取尽可能多的有效字符，并将它们解释为数值。最后，指向str中整数表示之后的第一个字符的指针存储在endptr指向的对象中。(The function first discards as many whitespace characters as necessary until the first non-whitespace character is found. Then, starting from this character, takes as many characters as possible that are valid following a syntax that depends on the base parameter, and interprets them as a numerical value. Finally , a pointer to the first character following the integer representation in str is stored in the object pointed by endptr.)
++ 原型：` long int strtol (const char* str, char** endptr, int base);`
++ 功能：
+  + 解析C字符串str，将其内容解释为指定基数的整数，该基数作为long int返回。如果endptr不是空指针，该函数还将endptr的值设置为指向数字后的第一个字符。
+  + 该函数首先根据需要丢弃尽可能多的空白字符，直到找到第一个非空白字符。然后，从这个字符开始，按照依赖于基本参数的语法获取尽可能多的有效字符，并将它们解释为数值。
+  + 最后，指向str中整数表示之后的第一个字符的指针存储在endptr指向的对象中。
 + 参数：
   + `str`:以整数表示的C字符串开头(C-string beginning with the representation of an integral number)
   + `endptr`:引用`char*`类型的对象，其值由函数设置为`str`中数值之后的下一个字符。
@@ -338,28 +374,37 @@
 + 返回值：
   + 成功时，该函数将转换后的整数作为long int值返回
   + 如果无法执行有效转换，则返回零值
++ 需求：
+  + 头文件：`#include <stdlib.h>`
 
 ## strcasecmp()
 
-+ `#include <string.h>  extern int strcasecmp(const char *__s1, const char *__s2)`
-+ 函数功能：比较参数s1和s2字符串，比较时会自动忽略大小写的差异
++ 原型：`extern int strcasecmp(const char *__s1, const char *__s2)`
++ 功能：比较参数s1和s2字符串，比较时会自动忽略大小写的差异
++ 参数：
+  + `__s1`  -- 字符指针s1
+  + `__s2`  -- 字符指针s2
 + 返回值：
   + 若参数s1和s2字符串相等则返回0；
   + s1大于s2，则返回大于0的值；
   + s1小于s2则返回小于0的值
++ 需求：
+  + 头文件：`#include <string.h>`
   
 ## strncasecmp()
 
-+ `#include <string.h>  int strncasecmp(const char* s1, const char* s2, size_t n);`
-  
-+ 功能：
-  + 用来比较参数s1和s2字符串前n各字符，比较时会自动忽略大小写的差异
-
++ 原型：` int strncasecmp(const char* s1, const char* s2, size_t n);`
++ 功能：用来比较参数s1和s2字符串前n各字符，比较时会自动忽略大小写的差异
++ 参数：
+  + `s1`  -- 字符指针s1
+  + `s2`  -- 字符指针s2
+  + `n`   -- 字符数n
 + 返回值
   + 如果参数s1和s2字符串相同，则返回0
   + s1若大于s2，则返回大于0的值
   + s1若小于s2，则返回小于0的值
-
++ 需求：
+  + 头文件：`#include <string.h>`
 ## reserve()
 
 + 原型：`void reserve (size_type n);`
@@ -405,9 +450,17 @@
 
 ## fstat()
 
-+ `#include <sys/stat.h>  int fstat(int __fd, struct stat *__buf);`
++ 原型：`int fstat(int __fd, struct stat *__buf);`
 + 功能：获取文件的所有信息
   + Get file attributes for the file, device, pipe, or socket that file descriptor FD is open on and put the in BUF
++ 参数：
+  + `__fd`  --  文件描述符
+  + `__buf` --  内存区域指针
++ 返回值：
+  + 成功  --  0
+  + 失败  --  1
++ 需求：
+  + 头文件：`#include <sys/stat.h>`
 
 ## mmap()
 
@@ -418,7 +471,7 @@
 + Linux通过内存映像机制来提供用户程序对内存直接访问的能力。内存映像的意思是把内核中特定部分的内存空间映射到用户级程序的内存空间去。也就是说，用户空间和内核空间共享一块相同的内存。
 + 相对于传统的write/read IO系统调用，必需先把数据从磁盘拷贝至内核缓冲区（页缓冲），然后再把数据拷贝至用户进程中。两者相比，mmap会少一次拷贝数据，这样带来的性能提升是巨大的
 
-+ `#include <sys/mman.h>  void* mmap(void* addr, size_t length, int prot, int flags, int fd, off_t offset);`
++ 原型：`void* mmap(void* addr, size_t length, int prot, int flags, int fd, off_t offset);`
 + 参数
   + `addr` -- 指定文件应被映射到进程空间的起始地址，一般被指定一个空指针，此时选择起始地址的任务留给内核来完成
   + `length` -- 指的是映射到调用进程地址空间的字节数，它从被映射文件开头offset各字节开始算起
@@ -428,17 +481,23 @@
   + `fd` -- 为即将映射到进程空间的文件描述字，一般由`open()`返回。
 + 返回值
   + 函数的返回值为最后文件映射到进程空间的地址，进程可直接操作其是地址为该值的有效地值。
++ 需求：
+  + 头文件：`#include <sys/mman.h>`
 
 + 具体原理：`https://blog.csdn.net/Holy_666/article/details/86532671`
 
 ## munmap()
 
-+ `#include <sys/mman.h>  int munmap(void* __addr, size_t __len);`
++ 原型：`int munmap(void* __addr, size_t __len);`
 + 功能：解除任何内存映射
-  + Deallocate any mapping for the region starting at ADDR and extending LEN bytes. 
++ 参数：
+  + `addr`  --  内存地址
+  + `__len` --  内存地址大小
 + 返回值
-  + 成功返回0
-  + 失败返回-1
+  + 成功  --  0
+  + 失败  --  -1
++ 需求：
+  + 头文件：`#include <sys/mman.h>`
 
 ## 锁定物理内存 -- mlock家族
 
@@ -453,10 +512,10 @@
     int munlockall(void);
   ```
 
-+ `getpagesize()`函数返回系统的分页大小，在X86 Linux系统上，这个值是4KB
++ `getpagesize()` 函数返回系统的分页大小，在X86 Linux系统上，这个值是4KB
 
-+ 如果希望程序的全部地址空间被锁定在物理内存中，使用`mlockall`，该函数将调用进程的全部虚拟地址空间加锁，防止出现内存交换，将该进程的地址空间交换到外存上
-+ `mlockall()`将所有映射到进程地址空间的内存上锁，这些页包括 -- 代码段，数据段，栈段，共享库，共享内存, user space kernel data, memory-mapped file。当函数成功返回的时候，所有的被映射的页都在内存中
++ 如果希望程序的全部地址空间被锁定在物理内存中，使用 `mlockall` ，该函数将调用进程的全部虚拟地址空间加锁，防止出现内存交换，将该进程的地址空间交换到外存上
++ `mlockall()` 将所有映射到进程地址空间的内存上锁，这些页包括 -- 代码段，数据段，栈段，共享库，共享内存, user space kernel data, memory-mapped file。当函数成功返回的时候，所有的被映射的页都在内存中
 + 参数
   + `MCL_CURRENT` -- 仅当前已分配的内存会被锁定，之后分配的内存则不会
   + `MCL_FUTURE` -- 锁定之后分配的所有内存
@@ -473,9 +532,8 @@
 
 ## clock_gettime()
 
-+ 功能：函数`clock_gettime()`是基于Linux C语言的时间函数，可以用于计算时间，有秒和纳秒两种精度
-
 + 函数原型：`int clock_gettime(clockid_t clk_id, struct timespec *tp);`
++ 功能：用于计算时间，有秒和纳秒两种精度
 + 参数：
   + `clockid_t clk_id`有四种
     + `CLOCK_REALTIME` -- 系统实时时间，随系统实时时间改变而改变
@@ -485,17 +543,14 @@
 
 ## vsscanf()
 
-+ `int vsscanf(const char* s, const char* format, va_list arg);`
-  
++ 原型：`int vsscanf(const char* s, const char* format, va_list arg);`
 + 功能：**将格式化数据从字符串读取到变量参数列表中**。从s读取数据并根据参数格式将它们存储到由arg标识的变量参数列表中的元素所指向的位置。
   + 在内部，该函数从由arg标识的列表中检索参数，就好像在其上使用了`va_arg`一样，因此`arg`的状态可能会被调用更改。
   + 无论如何，`arg`应该在调用之前的某个时间点由`va_start`初始化，并且预计在调用之后的某个时间点由`va_end`释放。
-  
 + 参数
   + `s` -- 函数将其处理为检索数据的源的C字符串
   + `format` -- 包含**格式字符串**的C字符串，该格式字符串遵循与`scanf`中的格式相同的规范
   + `arg` -- 一个值，用于标识使用`va_start`初始化的变量参数列表。`va_list`是在`<cstdarg>`中定义的特殊类型。
-  
 + 返回值：
   + 成功时，该函数返回参数列表中成功填充的项目数
   + 在匹配失败的情况下，此计数可以匹配预期的项目数或更少，甚至为零。
@@ -503,27 +558,22 @@
 
 ## memset()
 
-+ `void* memset(void* ptr, int value, size_t num);`
-  
++ 原型：`void* memset(void* ptr, int value, size_t num);`
 + 功能：
   + 将`ptr`指向的内存块的前`num`字节设置为指定值（解释为无符号字符）
   + Sets the first num bytes of the block of memory pointed by ptr to the specified value(interpreted as an unsigned char).
-  
 + 参数
   + `ptr` -- 指向要填充的内存块的指针
   + `value` -- 要设置的值。该值作为int传递，但是该函数使用该值的转换的无符号字符填充内存块
   + `num` -- 要设置为值的字节数。`size_t`是无符号整数类型
-
 + 返回值
   + 返回`ptr`
 
 ## max()
 
-+ `template <class T> const T& max (const T& a, const T& b);`
-  
++ 原型：`template <class T> const T& max (const T& a, const T& b);`
 + 功能
   + 返回a和b中的最大值。如果两者相等，则返回a
-
 + 返回值
   + 作为参数传递的最大值
 
@@ -621,7 +671,7 @@
   + 箭头`->` : 左边必须为指针
   + 点号`.` : 左边必须为实体
 
-## C++中用`new`和不用`new`创建类对象
+## C++中用 `new` 和不用 `new` 创建类对象
 
 + `new`创建类对象，使用完需要使用`delete`删除，和申请内存类似。
 + `new`创建类对象和不使用`new`的区别
@@ -636,7 +686,6 @@
 + 只定义类指针：
   + 这跟不用new声明对象有很大区别：类指针可以先行定义，但是类指针只是一个通用指针，在`new`之前并未对该类对象分配任何内存空间。
   + 使用普通方式创建的类对象，在创建之初就已经分配了内存空间，而类指针，如果没有经过对象初始化，则不需要`delete`释放
-
 
 ## tuple,元组
 
@@ -756,3 +805,13 @@
   + T2  --  第二个值的数据类型
 + 需求：
   + 头文件:`#include <utility>   // std::pair, std::make_pair`
+
+## `for(auto &tmp : m_data)`  --  iterating for loop
+
++ 基于循环的范围是在C++11标准中添加的，是其传统等效物的一种更紧凑的形式。基于循环的范围用于从头到尾迭代容器的元素
+  + The range based for loop is added in C++11 standard and is a more compact form of its traditional equivalent. The range based for loop is used to iterate over elements of a container from beginning to end.
+
++ Syntax: `for(range-declaration : range-expression) loop statement`
+  + `range-declaration`  --  it is declaration of a variable of type same as the type of elements of range-expression. Often the auto keyword is used to automatically identify the type of elements in range-expression.
+  + `range-expression`   --  any expression used to represent a sequence of elements. Also Sequence of elements in braces can be used.
+  + `loop-statement`     --  body of for loop that contains one or more statements that are to be executed repeatedly till the end of range-expression
